Convert all types to lua types

--- a/docs/api/assetManager.mdx
+++ b/docs/api/assetManager.mdx
@@ -11,13 +11,13 @@ id: AssetManager
 
 ### ResResource Get(string) {#ResResource-Get-string}
 
-### bool AddAsset(type, string) {#bool-AddAsset-type-string}
+### boolean AddAsset(type, string) {#boolean-AddAsset-type-string}
 
-### bool AddAsset(string, string) {#bool-AddAsset-string-string}
+### boolean AddAsset(string, string) {#boolean-AddAsset-string-string}
 
 ### type GetResourceType(ResResource) {#type-GetResourceType-ResResource}
 
-### bool IsAssetType(type) {#bool-IsAssetType-type}
+### boolean IsAssetType(type) {#boolean-IsAssetType-type}
 
 ### table GetAssetTypes(AssetManager) {#table-GetAssetTypes-AssetManager}
 
