--- a/docs/api/camera.mdx
+++ b/docs/api/camera.mdx
@@ -20,12 +20,12 @@ Transforms a 3D world coordinate (Vec3) to a 2D screen space percentage coordina
 ### Object object {#Object-object}
 Reference to object instance
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 Indicates whether the object is destroyed (true) or not (false).
 
 ### string type {#string-type}
 Specifies the object's type as a string, useful for type identification.
 
-### float fovY {#float-fovY}
+### number fovY {#number-fovY}
 Defines the vertical field of view in degrees
 
