--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -9,11 +9,11 @@ This class is only available on client
 
 ## Methods
 
-### int GetID() {#int-GetID}
+### integer GetID() {#integer-GetID}
 
 ### Guid GetUserID() {#Guid-GetUserID}
 
-### string UIItemUpdate(int actionID, UIItem item, userdata value) {#string-UIItemUpdate-int-actionID-UIItem-item-userdata-value}
+### string UIItemUpdate(integer actionID, UIItem item, userdata value) {#string-UIItemUpdate-integer-actionID-UIItem-item-userdata-value}
 
 ### nil OpenKeyboardShortcutInput(string keyActionID) {#nil-OpenKeyboardShortcutInput-string-keyActionID}
 
@@ -25,29 +25,29 @@ This class is only available on client
 
 ### nil SetToClientUI() {#nil-SetToClientUI}
 
-### nil SetShowWindows(bool) {#nil-SetShowWindows-bool}
+### nil SetShowWindows(boolean) {#nil-SetShowWindows-boolean}
 
-### bool GetShowWindows() {#bool-GetShowWindows}
+### boolean GetShowWindows() {#boolean-GetShowWindows}
 
-### bool GetUICapturesMouseOrKeyboard() {#bool-GetUICapturesMouseOrKeyboard}
+### boolean GetUICapturesMouseOrKeyboard() {#boolean-GetUICapturesMouseOrKeyboard}
 
-### bool GetUICapturesMouse() {#bool-GetUICapturesMouse}
+### boolean GetUICapturesMouse() {#boolean-GetUICapturesMouse}
 
-### bool GetUICapturesKeyboard() {#bool-GetUICapturesKeyboard}
+### boolean GetUICapturesKeyboard() {#boolean-GetUICapturesKeyboard}
 
-### bool GetUICapturesTextInput() {#bool-GetUICapturesTextInput}
+### boolean GetUICapturesTextInput() {#boolean-GetUICapturesTextInput}
 
-### bool GetUIIsInEditMode() {#bool-GetUIIsInEditMode}
+### boolean GetUIIsInEditMode() {#boolean-GetUIIsInEditMode}
 
 ### nil OpenUIWindow(string windowID) {#nil-OpenUIWindow-string-windowID}
 
 ### nil CloseUIWindow(string windowID) {#nil-CloseUIWindow-string-windowID}
 
-### nil SetUIWindowOpen(string windowID, bool open) {#nil-SetUIWindowOpen-string-windowID-bool-open}
+### nil SetUIWindowOpen(string windowID, boolean open) {#nil-SetUIWindowOpen-string-windowID-boolean-open}
 
 ### nil ToggleUIWindow(string windowID) {#nil-ToggleUIWindow-string-windowID}
 
-### bool IsWindowOpen(string windowID) {#bool-IsWindowOpen-string-windowID}
+### boolean IsWindowOpen(string windowID) {#boolean-IsWindowOpen-string-windowID}
 
 ### nil SetWindowPos(string windowID, Vec2 position) {#nil-SetWindowPos-string-windowID-Vec2-position}
 
@@ -55,7 +55,7 @@ This class is only available on client
 
 ### nil CloseUI() {#nil-CloseUI}
 
-### bool IsUIOpen() {#bool-IsUIOpen}
+### boolean IsUIOpen() {#boolean-IsUIOpen}
 
 ### nil SetUIPose(Quat, Vec3) {#nil-SetUIPose-Quat-Vec3}
 
@@ -63,17 +63,17 @@ This class is only available on client
 
 ### nil OpenScriptFile(string) {#nil-OpenScriptFile-string}
 
-### nil OpenScriptFile(string, int) {#nil-OpenScriptFile-string-int}
+### nil OpenScriptFile(string, integer) {#nil-OpenScriptFile-string-integer}
 
 ### string GetScript(string) {#string-GetScript-string}
 
-### nil SetUIScale(float scale) {#nil-SetUIScale-float-scale}
+### nil SetUIScale(number scale) {#nil-SetUIScale-number-scale}
 
-### float GetUIScale() {#float-GetUIScale}
+### number GetUIScale() {#number-GetUIScale}
 
-### bool GetUIScaleAuto() {#bool-GetUIScaleAuto}
+### boolean GetUIScaleAuto() {#boolean-GetUIScaleAuto}
 
-### nil SetUIScaleAuto(bool autoScale) {#nil-SetUIScaleAuto-bool-autoScale}
+### nil SetUIScaleAuto(boolean autoScale) {#nil-SetUIScaleAuto-boolean-autoScale}
 
 ### string GetUILayout() {#string-GetUILayout}
 
@@ -102,43 +102,43 @@ Disconnected
 
 ### nil Disconnect() {#nil-Disconnect}
 
-### float GetLogValue(string) {#float-GetLogValue-string}
+### number GetLogValue(string) {#number-GetLogValue-string}
 
-### nil SetLogValue(string, float) {#nil-SetLogValue-string-float}
+### nil SetLogValue(string, number) {#nil-SetLogValue-string-number}
 
 ### nil SetStrLogValue(string, string) {#nil-SetStrLogValue-string-string}
 
-### float GetLogIValue(int) {#float-GetLogIValue-int}
+### number GetLogIValue(integer) {#number-GetLogIValue-integer}
 
-### string GetLogIValueName(int) {#string-GetLogIValueName-int}
+### string GetLogIValueName(integer) {#string-GetLogIValueName-integer}
 
-### string GetLogIValueOutputName(int) {#string-GetLogIValueOutputName-int}
+### string GetLogIValueOutputName(integer) {#string-GetLogIValueOutputName-integer}
 
-### bool GetLogIsValue(int) {#bool-GetLogIsValue-int}
+### boolean GetLogIsValue(integer) {#boolean-GetLogIsValue-integer}
 
-### int GetLogValuesCount() {#int-GetLogValuesCount}
+### integer GetLogValuesCount() {#integer-GetLogValuesCount}
 
 ### userdata GetLogValueForPlot(string) {#userdata-GetLogValueForPlot-string}
 
 ### string GetLogStrValue(string) {#string-GetLogStrValue-string}
 
-### string GetLogStrIValue(int) {#string-GetLogStrIValue-int}
+### string GetLogStrIValue(integer) {#string-GetLogStrIValue-integer}
 
-### string GetLogStrIValueName(int) {#string-GetLogStrIValueName-int}
+### string GetLogStrIValueName(integer) {#string-GetLogStrIValueName-integer}
 
-### string GetLogStrIValueOutputName(int) {#string-GetLogStrIValueOutputName-int}
+### string GetLogStrIValueOutputName(integer) {#string-GetLogStrIValueOutputName-integer}
 
-### bool GetLogStrIsValue(int) {#bool-GetLogStrIsValue-int}
+### boolean GetLogStrIsValue(integer) {#boolean-GetLogStrIsValue-integer}
 
-### int GetLogStrValuesCount() {#int-GetLogStrValuesCount}
+### integer GetLogStrValuesCount() {#integer-GetLogStrValuesCount}
 
-### double GetLogTime(string) {#double-GetLogTime-string}
+### number GetLogTime(string) {#number-GetLogTime-string}
 
 ### table GetLogTimers(string) {#table-GetLogTimers-string}
 
 ### table GetMainDispatcherStats() {#table-GetMainDispatcherStats}
 
-### double GetFPS() {#double-GetFPS}
+### number GetFPS() {#number-GetFPS}
 
 ### Config GetConfigInputActions() {#Config-GetConfigInputActions}
 
@@ -146,53 +146,53 @@ Disconnected
 
 ### nil Disconnect(string) {#nil-Disconnect-string}
 
-### bool OpenFolder(string folder) {#bool-OpenFolder-string-folder}
+### boolean OpenFolder(string folder) {#boolean-OpenFolder-string-folder}
 
-### int GetScriptsVersion() {#int-GetScriptsVersion}
+### integer GetScriptsVersion() {#integer-GetScriptsVersion}
 
-### int GetLoadedScriptsVersion() {#int-GetLoadedScriptsVersion}
+### integer GetLoadedScriptsVersion() {#integer-GetLoadedScriptsVersion}
 
 ### nil LuaOpenDebugger() {#nil-LuaOpenDebugger}
 
-### nil LuaEnableDebugging(bool enable) {#nil-LuaEnableDebugging-bool-enable}
+### nil LuaEnableDebugging(boolean enable) {#nil-LuaEnableDebugging-boolean-enable}
 
 ### nil OnLuaLog() {#nil-OnLuaLog}
 
 ### nil ScrollToLastestLuaLog() {#nil-ScrollToLastestLuaLog}
 
-### bool IsContainerEnabledAndVisible(UIItem uiItem) {#bool-IsContainerEnabledAndVisible-UIItem-uiItem}
+### boolean IsContainerEnabledAndVisible(UIItem uiItem) {#boolean-IsContainerEnabledAndVisible-UIItem-uiItem}
 
 ### nil Log(string) {#nil-Log-string}
 
-### bool IsClient() {#bool-IsClient}
+### boolean IsClient() {#boolean-IsClient}
 
-### bool IsServer() {#bool-IsServer}
+### boolean IsServer() {#boolean-IsServer}
 
-### bool DevMode() {#bool-DevMode}
+### boolean DevMode() {#boolean-DevMode}
 
-### bool GetNetworkThrottlingNow() {#bool-GetNetworkThrottlingNow}
+### boolean GetNetworkThrottlingNow() {#boolean-GetNetworkThrottlingNow}
 
 ### nil SelectItemInUICreator(UIItem uiItem) {#nil-SelectItemInUICreator-UIItem-uiItem}
 
-### UIItem GetUIItemByUIActionID(int uiActionID) {#UIItem-GetUIItemByUIActionID-int-uiActionID}
+### UIItem GetUIItemByUIActionID(integer uiActionID) {#UIItem-GetUIItemByUIActionID-integer-uiActionID}
 
-### string GetUIActionType(int uiActionID) {#string-GetUIActionType-int-uiActionID}
+### string GetUIActionType(integer uiActionID) {#string-GetUIActionType-integer-uiActionID}
 
-### string GetUIActionScript(int uiActionID) {#string-GetUIActionScript-int-uiActionID}
+### string GetUIActionScript(integer uiActionID) {#string-GetUIActionScript-integer-uiActionID}
 
-### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
+### integer GetCurrentUIActionID() {#integer-GetCurrentUIActionID}
 
-### nil SetIntersectionTint(Vec4) {#nil-SetIntersectionTint-Vec4}
+### nil SetIntersectionTinteger(Vec4) {#nil-SetIntersectionTinteger-Vec4}
 
 ### nil SetIntersectionBox(Vec3, Quat, Vec3) {#nil-SetIntersectionBox-Vec3-Quat-Vec3}
 
-### nil SetIntersectionSphere(Vec3, float) {#nil-SetIntersectionSphere-Vec3-float}
+### nil SetIntersectionSphere(Vec3, number) {#nil-SetIntersectionSphere-Vec3-number}
 
-### nil WriteToScreen(string, Vec2, Vec2, Vec4, int, Vec4, float) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int-Vec4-float}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4, integer, Vec4, number) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-integer-Vec4-number}
 
-### nil WriteToScreen(string, Vec2, Vec2, Vec4, int) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4, integer) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-integer}
 
-### nil WriteToScreen(string, Vec2, Vec2, Vec4, int, Vec4) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int-Vec4}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4, integer, Vec4) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-integer-Vec4}
 
 ### nil CloseApp() {#nil-CloseApp}
 
@@ -209,31 +209,31 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil SetBGColor(Vec4) {#nil-SetBGColor-Vec4}
 
-### bool GetVREnabled() {#bool-GetVREnabled}
+### boolean GetVREnabled() {#boolean-GetVREnabled}
 
-### nil SetVREnabled(bool, string) {#nil-SetVREnabled-bool-string}
+### nil SetVREnabled(boolean, string) {#nil-SetVREnabled-boolean-string}
 
 ### nil ToggleVREnabled(string) {#nil-ToggleVREnabled-string}
 
-### Vec3, Quat GetVREyeTransform(int, Space) {#Vec3-Quat-GetVREyeTransform-int-Space}
+### Vec3, Quat GetVREyeTransform(integer, Space) {#Vec3-Quat-GetVREyeTransform-integer-Space}
 
 ### Vec3, Quat GetVRHeadsetTransform(Space) {#Vec3-Quat-GetVRHeadsetTransform-Space}
 
-### nil ApplyVRHapticFeedback(int, float, float, float) {#nil-ApplyVRHapticFeedback-int-float-float-float}
+### nil ApplyVRHapticFeedback(integer, number, number, number) {#nil-ApplyVRHapticFeedback-integer-number-number-number}
 
-### bool GetVREyeTrackingSupported() {#bool-GetVREyeTrackingSupported}
+### boolean GetVREyeTrackingSupported() {#boolean-GetVREyeTrackingSupported}
 
-### double SetVRUserScale(double) {#double-SetVRUserScale-double}
+### number SetVRUserScale(number) {#number-SetVRUserScale-number}
 
-### double GetVRUserScale() {#double-GetVRUserScale}
+### number GetVRUserScale() {#number-GetVRUserScale}
 
-### double GetVRUserScaleMin() {#double-GetVRUserScaleMin}
+### number GetVRUserScaleMin() {#number-GetVRUserScaleMin}
 
-### double GetVRUserScaleMax() {#double-GetVRUserScaleMax}
+### number GetVRUserScaleMax() {#number-GetVRUserScaleMax}
 
-### bool SendFile(File) {#bool-SendFile-File}
+### boolean SendFile(File) {#boolean-SendFile-File}
 
-### bool SendFiles(table) {#bool-SendFiles-table}
+### boolean SendFiles(table) {#boolean-SendFiles-table}
 
 ### nil Restart() {#nil-Restart}
 
@@ -253,11 +253,11 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil ToggleChannelRendering() {#nil-ToggleChannelRendering}
 
-### int GetRenderChannelsCount() {#int-GetRenderChannelsCount}
+### integer GetRenderChannelsCount() {#integer-GetRenderChannelsCount}
 
-### float GetRenderChannelOpacity(int) {#float-GetRenderChannelOpacity-int}
+### number GetRenderChannelOpacity(integer) {#number-GetRenderChannelOpacity-integer}
 
-### nil SetRenderChannelOpacity(int, float) {#nil-SetRenderChannelOpacity-int-float}
+### nil SetRenderChannelOpacity(integer, number) {#nil-SetRenderChannelOpacity-integer-number}
 
 ### nil LoadEntityPath() {#nil-LoadEntityPath}
 
@@ -267,9 +267,9 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil ClearEntityPath() {#nil-ClearEntityPath}
 
-### nil AddEntityPathWaypoint() {#nil-AddEntityPathWaypoint}
+### nil AddEntityPathWaypointeger() {#nil-AddEntityPathWaypointeger}
 
-### nil TakeScreenshot(string, bool) {#nil-TakeScreenshot-string-bool}
+### nil TakeScreenshot(string, boolean) {#nil-TakeScreenshot-string-boolean}
 
 ### table GetVersion() {#table-GetVersion}
 
@@ -277,7 +277,7 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### Device GetDevice() {#Device-GetDevice}
 
-### int GetMemoryUsage() {#int-GetMemoryUsage}
+### integer GetMemoryUsage() {#integer-GetMemoryUsage}
 
 ### string GetCredits() {#string-GetCredits}
 
@@ -293,9 +293,9 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### string GetLastSyncMessageSent() {#string-GetLastSyncMessageSent}
 
-### bool GetUpdateSyncMessageString() {#bool-GetUpdateSyncMessageString}
+### boolean GetUpdateSyncMessageString() {#boolean-GetUpdateSyncMessageString}
 
-### nil SetUpdateSyncMessageString(bool) {#nil-SetUpdateSyncMessageString-bool}
+### nil SetUpdateSyncMessageString(boolean) {#nil-SetUpdateSyncMessageString-boolean}
 
 ### nil CopyToClipboard(string) {#nil-CopyToClipboard-string}
 
@@ -304,7 +304,7 @@ may not work on all platforms
 
 ### nil OpenBrowserWithURL(string) {#nil-OpenBrowserWithURL-string}
 
-### nil ReloadPage(bool) {#nil-ReloadPage-bool}
+### nil ReloadPage(boolean) {#nil-ReloadPage-boolean}
 
 ## Metamethods
 
@@ -312,27 +312,27 @@ may not work on all platforms
 
 ### table EnumerateTestRenderObjects() {#table-EnumerateTestRenderObjects}
 
-### bool IsTestRenderObjectEnabled(string) {#bool-IsTestRenderObjectEnabled-string}
+### boolean IsTestRenderObjectEnabled(string) {#boolean-IsTestRenderObjectEnabled-string}
 
-### bool SetTestRenderObjectEnabled(string, bool) {#bool-SetTestRenderObjectEnabled-string-bool}
+### boolean SetTestRenderObjectEnabled(string, boolean) {#boolean-SetTestRenderObjectEnabled-string-boolean}
 
-### bool ToggleTestRenderObjectEnabled(string) {#bool-ToggleTestRenderObjectEnabled-string}
+### boolean ToggleTestRenderObjectEnabled(string) {#boolean-ToggleTestRenderObjectEnabled-string}
 
-### nil EnableRenderingWithFadeEffect(int, float) {#nil-EnableRenderingWithFadeEffect-int-float}
+### nil EnableRenderingWithFadeEffect(integer, number) {#nil-EnableRenderingWithFadeEffect-integer-number}
 
-### nil DisableRenderingWithFadeEffect(int, float) {#nil-DisableRenderingWithFadeEffect-int-float}
+### nil DisableRenderingWithFadeEffect(integer, number) {#nil-DisableRenderingWithFadeEffect-integer-number}
 
-### nil ToggleRenderingWithFadeEffect(int, float) {#nil-ToggleRenderingWithFadeEffect-int-float}
+### nil ToggleRenderingWithFadeEffect(integer, number) {#nil-ToggleRenderingWithFadeEffect-integer-number}
 
 ## Properties
 
-### int clientID {#int-clientID}
+### integer clientID {#integer-clientID}
 
 ### Guid userID {#Guid-userID}
 
 ### ClientMode mode {#ClientMode-mode}
 
-### bool isMaker {#bool-isMaker}
+### boolean isMaker {#boolean-isMaker}
 
 ### string platform {#string-platform}
 
