--- a/docs/api/collision.mdx
+++ b/docs/api/collision.mdx
@@ -29,12 +29,12 @@ checks collision between shape and geometry passed by filter
 
 ### Filter filter {#Filter-filter}
 
-### int maxHitCount {#int-maxHitCount}
+### integer maxHitCount {#integer-maxHitCount}
 doesn't influence result, just limits returned hits table size
 
 ### Shape shape {#Shape-shape}
 
-### bool precise {#bool-precise}
+### boolean precise {#boolean-precise}
 
 ### Vec3 rayPos {#Vec3-rayPos}
 
