--- a/docs/api/commandLine.mdx
+++ b/docs/api/commandLine.mdx
@@ -7,11 +7,11 @@ id: CommandLine
 
 ## Methods
 
-### bool HasOption(string) {#bool-HasOption-string}
+### boolean HasOption(string) {#boolean-HasOption-string}
 
-### float GetOptionFloat(string, float) {#float-GetOptionFloat-string-float}
+### number GetOptionFloat(string, number) {#number-GetOptionFloat-string-number}
 
-### int GetOptionInt(string, int) {#int-GetOptionInt-string-int}
+### integer GetOptionInt(string, integer) {#integer-GetOptionInt-string-integer}
 
 ### string GetOption(string, string) {#string-GetOption-string-string}
 
