--- a/docs/api/component.mdx
+++ b/docs/api/component.mdx
@@ -9,7 +9,7 @@ id: Component
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
