--- a/docs/api/config.mdx
+++ b/docs/api/config.mdx
@@ -7,11 +7,11 @@ id: Config
 
 ## Methods
 
-### nil SetInt(string, int) {#nil-SetInt-string-int}
+### nil SetInt(string, integer) {#nil-SetInt-string-integer}
 
-### nil SetFloat(string, double) {#nil-SetFloat-string-double}
+### nil SetFloat(string, number) {#nil-SetFloat-string-number}
 
-### nil SetBool(string, bool) {#nil-SetBool-string-bool}
+### nil SetBool(string, boolean) {#nil-SetBool-string-boolean}
 
 ### nil SetString(string, string) {#nil-SetString-string-string}
 
@@ -23,22 +23,22 @@ id: Config
 
 ### nil Del(string) {#nil-Del-string}
 
-### bool Exists(string) {#bool-Exists-string}
+### boolean Exists(string) {#boolean-Exists-string}
 
 ### nil EmitChangeSignal() {#nil-EmitChangeSignal}
 force saving Config
 
-### int GetInt(string) {#int-GetInt-string}
+### integer GetInt(string) {#integer-GetInt-string}
 
-### int GetInt(string, int) {#int-GetInt-string-int}
+### integer GetInt(string, integer) {#integer-GetInt-string-integer}
 
-### double GetFloat(string) {#double-GetFloat-string}
+### number GetFloat(string) {#number-GetFloat-string}
 
-### double GetFloat(string, double) {#double-GetFloat-string-double}
+### number GetFloat(string, number) {#number-GetFloat-string-number}
 
-### bool GetBool(string) {#bool-GetBool-string}
+### boolean GetBool(string) {#boolean-GetBool-string}
 
-### bool GetBool(string, bool) {#bool-GetBool-string-bool}
+### boolean GetBool(string, boolean) {#boolean-GetBool-string-boolean}
 
 ### string GetString(string) {#string-GetString-string}
 
