--- a/docs/api/cylinder.mdx
+++ b/docs/api/cylinder.mdx
@@ -9,7 +9,7 @@ id: Cylinder
 
 ### Cylinder() {#Cylinder}
 
-### Cylinder(Vec3, Vec3, float, float) {#Cylinder-Vec3-Vec3-float-float}
+### Cylinder(Vec3, Vec3, number, number) {#Cylinder-Vec3-Vec3-number-number}
 
 ### Cylinder(Vec3, Vec3) {#Cylinder-Vec3-Vec3}
 
