--- a/docs/api/filter.mdx
+++ b/docs/api/filter.mdx
@@ -9,20 +9,20 @@ id: Filter
 
 ### Filter() {#Filter}
 
-### Filter(bool, bool) {#Filter-bool-bool}
+### Filter(boolean, boolean) {#Filter-boolean-boolean}
 
 ### Filter(table, table) {#Filter-table-table}
 
 ## Properties
 
-### bool useStatic {#bool-useStatic}
+### boolean useStatic {#boolean-useStatic}
 
-### bool useNotStatic {#bool-useNotStatic}
+### boolean useNotStatic {#boolean-useNotStatic}
 use dynamic voxel objects
 
-### bool useTmpStatic {#bool-useTmpStatic}
+### boolean useTmpStatic {#boolean-useTmpStatic}
 
-### bool useTmpNotStatic {#bool-useTmpNotStatic}
+### boolean useTmpNotStatic {#boolean-useTmpNotStatic}
 
 ### table ignoreList {#table-ignoreList}
 contains objects
