--- a/docs/api/gamepad.mdx
+++ b/docs/api/gamepad.mdx
@@ -7,15 +7,15 @@ id: Gamepad
 
 ## Methods
 
-### bool ButtonDown(int) {#bool-ButtonDown-int}
+### boolean ButtonDown(integer) {#boolean-ButtonDown-integer}
 
-### bool Button(int) {#bool-Button-int}
+### boolean Button(integer) {#boolean-Button-integer}
 
-### bool ButtonUp(int) {#bool-ButtonUp-int}
+### boolean ButtonUp(integer) {#boolean-ButtonUp-integer}
 
-### float Axis(int) {#float-Axis-int}
+### number Axis(integer) {#number-Axis-integer}
 
-### int Rumble(int, int, int) {#int-Rumble-int-int-int}
+### integer Rumble(integer, integer, integer) {#integer-Rumble-integer-integer-integer}
 
-### int RumbleTriggers(int, int, int) {#int-RumbleTriggers-int-int-int}
+### integer RumbleTriggers(integer, integer, integer) {#integer-RumbleTriggers-integer-integer-integer}
 
