--- a/docs/api/hit.mdx
+++ b/docs/api/hit.mdx
@@ -15,7 +15,7 @@ id: Hit
 
 ### Object object {#Object-object}
 
-### float distance {#float-distance}
+### number distance {#number-distance}
 
 ### HitType type {#HitType-type}
 
