--- a/docs/api/image.mdx
+++ b/docs/api/image.mdx
@@ -7,9 +7,9 @@ id: Image
 
 ## Methods
 
-### bool IsValid() {#bool-IsValid}
+### boolean IsValid() {#boolean-IsValid}
 
-### bool IsManaged() {#bool-IsManaged}
+### boolean IsManaged() {#boolean-IsManaged}
 
 ## Properties
 
@@ -17,5 +17,5 @@ id: Image
 
 ### userdata mipMaps {#userdata-mipMaps}
 
-### bool isCubeMap {#bool-isCubeMap}
+### boolean isCubeMap {#boolean-isCubeMap}
 
