--- a/docs/api/mat3.mdx
+++ b/docs/api/mat3.mdx
@@ -9,9 +9,9 @@ id: Mat3
 
 ### Mat3() {#Mat3}
 
-### Mat3(float) {#Mat3-float}
+### Mat3(number) {#Mat3-number}
 
-### Mat3(float, float, float, float, float, float, float, float, float) {#Mat3-float-float-float-float-float-float-float-float-float}
+### Mat3(number, number, number, number, number, number, number, number, number) {#Mat3-number-number-number-number-number-number-number-number-number}
 
 ### Mat3(Vec3, Vec3, Vec3) {#Mat3-Vec3-Vec3-Vec3}
 
@@ -37,45 +37,45 @@ id: Mat3
 
 ## Metamethods
 
-### Vec3 __index(Mat3, int) {#Vec3-index-Mat3-int}
+### Vec3 __index(Mat3, integer) {#Vec3-index-Mat3-integer}
 
-### nil __newindex(Mat3, int, Vec3) {#nil-newindex-Mat3-int-Vec3}
+### nil __newindex(Mat3, integer, Vec3) {#nil-newindex-Mat3-integer-Vec3}
 
 ### Mat3 __add(Mat3, Mat3) {#Mat3-add-Mat3-Mat3}
 
-### Mat3 __add(Mat3, float) {#Mat3-add-Mat3-float}
+### Mat3 __add(Mat3, number) {#Mat3-add-Mat3-number}
 
-### Mat3 __add(float, Mat3) {#Mat3-add-float-Mat3}
+### Mat3 __add(number, Mat3) {#Mat3-add-number-Mat3}
 
 ### Mat3 __sub(Mat3, Mat3) {#Mat3-sub-Mat3-Mat3}
 
-### Mat3 __sub(Mat3, float) {#Mat3-sub-Mat3-float}
+### Mat3 __sub(Mat3, number) {#Mat3-sub-Mat3-number}
 
-### Mat3 __sub(float, Mat3) {#Mat3-sub-float-Mat3}
+### Mat3 __sub(number, Mat3) {#Mat3-sub-number-Mat3}
 
 ### Mat3 __mul(Mat3, Mat3) {#Mat3-mul-Mat3-Mat3}
 
-### Mat3 __mul(Mat3, float) {#Mat3-mul-Mat3-float}
+### Mat3 __mul(Mat3, number) {#Mat3-mul-Mat3-number}
 
-### Mat3 __mul(float, Mat3) {#Mat3-mul-float-Mat3}
+### Mat3 __mul(number, Mat3) {#Mat3-mul-number-Mat3}
 
 ### Vec3 __mul(Vec3, Mat3) {#Vec3-mul-Vec3-Mat3}
 
 ### Mat3 __div(Mat3, Mat3) {#Mat3-div-Mat3-Mat3}
 
-### Mat3 __div(Mat3, float) {#Mat3-div-Mat3-float}
+### Mat3 __div(Mat3, number) {#Mat3-div-Mat3-number}
 
-### Mat3 __div(float, Mat3) {#Mat3-div-float-Mat3}
+### Mat3 __div(number, Mat3) {#Mat3-div-number-Mat3}
 
 ### Vec3 __div(Vec3, Mat3) {#Vec3-div-Vec3-Mat3}
 
 ### Mat3 __unm(Mat3) {#Mat3-unm-Mat3}
 
-### bool __eq(Mat3, Mat3) {#bool-eq-Mat3-Mat3}
+### boolean __eq(Mat3, Mat3) {#boolean-eq-Mat3-Mat3}
 
 ## Methods
 
-### float GetDeterminant() {#float-GetDeterminant}
+### number GetDeterminant() {#number-GetDeterminant}
 
 ### Mat3 Transpose() {#Mat3-Transpose}
 
@@ -85,13 +85,13 @@ id: Mat3
 
 ### Mat3 GetInverted() {#Mat3-GetInverted}
 
-### bool IsIdentity(float) {#bool-IsIdentity-float}
+### boolean IsIdentity(number) {#boolean-IsIdentity-number}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
-### bool IsSingular() {#bool-IsSingular}
+### boolean IsSingular() {#boolean-IsSingular}
 
-### bool IsAnyNaN() {#bool-IsAnyNaN}
+### boolean IsAnyNaN() {#boolean-IsAnyNaN}
 
 ## Properties
 
