--- a/docs/api/material.mdx
+++ b/docs/api/material.mdx
@@ -11,11 +11,11 @@ id: Material
 
 ## Methods
 
-### bool IsValid() {#bool-IsValid}
+### boolean IsValid() {#boolean-IsValid}
 
-### bool IsManaged() {#bool-IsManaged}
+### boolean IsManaged() {#boolean-IsManaged}
 
-### bool HasProperty(Material, string) {#bool-HasProperty-Material-string}
+### boolean HasProperty(Material, string) {#boolean-HasProperty-Material-string}
 
 ### Vec3 GetPropertyVec3(Material, string) {#Vec3-GetPropertyVec3-Material-string}
 
