--- a/docs/api/meshData.mdx
+++ b/docs/api/meshData.mdx
@@ -7,7 +7,7 @@ id: MeshData
 
 ## Metamethods
 
-### bool __eq(MeshData, MeshData) {#bool-eq-MeshData-MeshData}
+### boolean __eq(MeshData, MeshData) {#boolean-eq-MeshData-MeshData}
 
 ## Methods
 
@@ -15,19 +15,19 @@ id: MeshData
 
 ### nil ClearShape(PrimitiveTopology) {#nil-ClearShape-PrimitiveTopology}
 
-### int AddVertex(Vec3) {#int-AddVertex-Vec3}
+### integer AddVertex(Vec3) {#integer-AddVertex-Vec3}
 
-### int AddVertex(Vec3, Vec4) {#int-AddVertex-Vec3-Vec4}
+### integer AddVertex(Vec3, Vec4) {#integer-AddVertex-Vec3-Vec4}
 
-### int AddVertex(Vec3, Vec2, Vec4) {#int-AddVertex-Vec3-Vec2-Vec4}
+### integer AddVertex(Vec3, Vec2, Vec4) {#integer-AddVertex-Vec3-Vec2-Vec4}
 
-### int AddVertex(Vec3, Vec2) {#int-AddVertex-Vec3-Vec2}
+### integer AddVertex(Vec3, Vec2) {#integer-AddVertex-Vec3-Vec2}
 
-### nil AddIndex(int) {#nil-AddIndex-int}
+### nil AddIndex(integer) {#nil-AddIndex-integer}
 
-### nil AddIndex(int, int, int) {#nil-AddIndex-int-int-int}
+### nil AddIndex(integer, integer, integer) {#nil-AddIndex-integer-integer-integer}
 
-### nil AddIndex(int, int) {#nil-AddIndex-int-int}
+### nil AddIndex(integer, integer) {#nil-AddIndex-integer-integer}
 
 ### nil AddShape(Shape, Vec4) {#nil-AddShape-Shape-Vec4}
 
@@ -35,7 +35,7 @@ id: MeshData
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
