--- a/docs/api/meshRenderer.mdx
+++ b/docs/api/meshRenderer.mdx
@@ -7,13 +7,13 @@ id: MeshRenderer
 
 ## Metamethods
 
-### bool __eq(MeshRenderer, MeshRenderer) {#bool-eq-MeshRenderer-MeshRenderer}
+### boolean __eq(MeshRenderer, MeshRenderer) {#boolean-eq-MeshRenderer-MeshRenderer}
 
 ## Properties
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
