--- a/docs/api/overlap.mdx
+++ b/docs/api/overlap.mdx
@@ -11,7 +11,7 @@ id: Overlap
 
 ### Vec3 center {#Vec3-center}
 
-### float radius {#float-radius}
+### number radius {#number-radius}
 
 ### Object object {#Object-object}
 
