--- a/docs/api/realtimeLightingInfo.mdx
+++ b/docs/api/realtimeLightingInfo.mdx
@@ -9,31 +9,31 @@ id: RealtimeLightingInfo
 
 ### Vec3 diffuseColor {#Vec3-diffuseColor}
 
-### bool directionalLight {#bool-directionalLight}
+### boolean directionalLight {#boolean-directionalLight}
 
 ### Vec3 direction {#Vec3-direction}
 
-### float diffuseRayLen {#float-diffuseRayLen}
+### number diffuseRayLen {#number-diffuseRayLen}
 
-### float diffuseDirSpread {#float-diffuseDirSpread}
+### number diffuseDirSpread {#number-diffuseDirSpread}
 
-### int diffuseSamples {#int-diffuseSamples}
+### integer diffuseSamples {#integer-diffuseSamples}
 
-### float shadowsIntensity {#float-shadowsIntensity}
+### number shadowsIntensity {#number-shadowsIntensity}
 
-### bool shadows {#bool-shadows}
+### boolean shadows {#boolean-shadows}
 
-### bool ambientOcclusion {#bool-ambientOcclusion}
+### boolean ambientOcclusion {#boolean-ambientOcclusion}
 
 ### Vec3 ambientColor {#Vec3-ambientColor}
 
-### float ambientRayLen {#float-ambientRayLen}
+### number ambientRayLen {#number-ambientRayLen}
 
-### int ambientSamples {#int-ambientSamples}
+### integer ambientSamples {#integer-ambientSamples}
 
-### float skyAmbientIntensity {#float-skyAmbientIntensity}
+### number skyAmbientIntensity {#number-skyAmbientIntensity}
 
-### float ambientOcclusionFactor {#float-ambientOcclusionFactor}
+### number ambientOcclusionFactor {#number-ambientOcclusionFactor}
 
-### int taskBoxScale {#int-taskBoxScale}
+### integer taskBoxScale {#integer-taskBoxScale}
 
