--- a/docs/api/script.mdx
+++ b/docs/api/script.mdx
@@ -7,7 +7,7 @@ id: Script
 
 ## Methods
 
-### int RPC(...) {#int-RPC}
+### integer RPC(...) {#integer-RPC}
 
 ### string GetNetworkFlow() {#string-GetNetworkFlow}
 
@@ -17,7 +17,7 @@ id: Script
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
@@ -27,5 +27,5 @@ id: Script
 
 ### string file {#string-file}
 
-### bool syncToClients {#bool-syncToClients}
+### boolean syncToClients {#boolean-syncToClients}
 
