--- a/docs/api/shape.mdx
+++ b/docs/api/shape.mdx
@@ -13,17 +13,17 @@ id: Shape
 
 ### Vec3 size {#Vec3-size}
 
-### float radius {#float-radius}
+### number radius {#number-radius}
 
-### float diameter {#float-diameter}
+### number diameter {#number-diameter}
 
 ### Vec3 pos2 {#Vec3-pos2}
 
-### float radius2 {#float-radius2}
+### number radius2 {#number-radius2}
 
-### float diameter2 {#float-diameter2}
+### number diameter2 {#number-diameter2}
 
 ### table points {#table-points}
 
-### bool useShellPositions {#bool-useShellPositions}
+### boolean useShellPositions {#boolean-useShellPositions}
 
