--- a/docs/api/sky.mdx
+++ b/docs/api/sky.mdx
@@ -9,23 +9,23 @@ id: Sky
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
-### float cloudScale {#float-cloudScale}
+### number cloudScale {#number-cloudScale}
 
-### float cloudOffset {#float-cloudOffset}
+### number cloudOffset {#number-cloudOffset}
 
-### float cloudSlope {#float-cloudSlope}
+### number cloudSlope {#number-cloudSlope}
 
-### float sunAzimuth {#float-sunAzimuth}
+### number sunAzimuth {#number-sunAzimuth}
 
-### float sunAltitude {#float-sunAltitude}
+### number sunAltitude {#number-sunAltitude}
 
 ### Vec3 rayleighCoeff {#Vec3-rayleighCoeff}
 
-### float mieCoeff {#float-mieCoeff}
+### number mieCoeff {#number-mieCoeff}
 
-### bool render {#bool-render}
+### boolean render {#boolean-render}
 
