--- a/docs/api/sphere.mdx
+++ b/docs/api/sphere.mdx
@@ -9,7 +9,7 @@ id: Sphere
 
 ### Sphere() {#Sphere}
 
-### Sphere(Vec3, float) {#Sphere-Vec3-float}
+### Sphere(Vec3, number) {#Sphere-Vec3-number}
 
 ### Sphere(Vec3) {#Sphere-Vec3}
 
