--- a/docs/api/staticVoxelData.mdx
+++ b/docs/api/staticVoxelData.mdx
@@ -9,11 +9,11 @@ id: StaticVoxelData
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
 ### string path {#string-path}
 
-### bool isLoaded {#bool-isLoaded}
+### boolean isLoaded {#boolean-isLoaded}
 
