--- a/docs/api/transform.mdx
+++ b/docs/api/transform.mdx
@@ -9,7 +9,7 @@ Holds position, rotation, and scale
 
 ## Metamethods
 
-### bool __eq(Transform, Transform) {#bool-eq-Transform-Transform}
+### boolean __eq(Transform, Transform) {#boolean-eq-Transform-Transform}
 
 ## Methods
 
@@ -33,14 +33,14 @@ A more customizable version of LookAt, allowing you to specify both the target p
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
 ### Vec3 localPos {#Vec3-localPos}
 The local position of the object relative to its parent
 
-### float localScale {#float-localScale}
+### number localScale {#number-localScale}
 The local scale of the object relative to its parent
 
 ### Quat localRot {#Quat-localRot}
@@ -58,7 +58,7 @@ The global (world) rotation of the object as a quaternion
 ### Vec3 eulerRot {#Vec3-eulerRot}
 The global (world) rotation of the object represented as Euler angles.
 
-### float scale {#float-scale}
+### number scale {#number-scale}
 The global (world) scale of the object.
 
 ### Vec3 right {#Vec3-right}
