--- a/docs/api/vec2.mdx
+++ b/docs/api/vec2.mdx
@@ -9,17 +9,17 @@ id: Vec2
 
 ### Vec2() {#Vec2}
 
-### Vec2(float) {#Vec2-float}
+### Vec2(number) {#Vec2-number}
 
-### Vec2(int) {#Vec2-int}
+### Vec2(integer) {#Vec2-integer}
 
-### Vec2(float, float) {#Vec2-float-float}
+### Vec2(number, number) {#Vec2-number-number}
 
-### Vec2(float, int) {#Vec2-float-int}
+### Vec2(number, integer) {#Vec2-number-integer}
 
-### Vec2(int, float) {#Vec2-int-float}
+### Vec2(integer, number) {#Vec2-integer-number}
 
-### Vec2(int, int) {#Vec2-int-int}
+### Vec2(integer, integer) {#Vec2-integer-integer}
 
 ### Vec2(Vec2) {#Vec2-Vec2}
 
@@ -35,91 +35,91 @@ id: Vec2
 
 ## Metamethods
 
-### float __index(Vec2, int) {#float-index-Vec2-int}
+### number __index(Vec2, integer) {#number-index-Vec2-integer}
 
-### nil __newindex(Vec2, int, float) {#nil-newindex-Vec2-int-float}
+### nil __newindex(Vec2, integer, number) {#nil-newindex-Vec2-integer-number}
 
 ### Vec2 __add(Vec2, Vec2) {#Vec2-add-Vec2-Vec2}
 
 ### Vec2 __add(Vec2, Vec2i) {#Vec2-add-Vec2-Vec2i}
 
-### Vec2 __add(Vec2, float) {#Vec2-add-Vec2-float}
+### Vec2 __add(Vec2, number) {#Vec2-add-Vec2-number}
 
-### Vec2 __add(float, Vec2) {#Vec2-add-float-Vec2}
+### Vec2 __add(number, Vec2) {#Vec2-add-number-Vec2}
 
 ### Vec2 __sub(Vec2, Vec2) {#Vec2-sub-Vec2-Vec2}
 
 ### Vec2 __sub(Vec2, Vec2i) {#Vec2-sub-Vec2-Vec2i}
 
-### Vec2 __sub(Vec2, float) {#Vec2-sub-Vec2-float}
+### Vec2 __sub(Vec2, number) {#Vec2-sub-Vec2-number}
 
-### Vec2 __sub(float, Vec2) {#Vec2-sub-float-Vec2}
+### Vec2 __sub(number, Vec2) {#Vec2-sub-number-Vec2}
 
 ### Vec2 __mul(Vec2, Vec2) {#Vec2-mul-Vec2-Vec2}
 
 ### Vec2 __mul(Vec2, Vec2i) {#Vec2-mul-Vec2-Vec2i}
 
-### Vec2 __mul(Vec2, float) {#Vec2-mul-Vec2-float}
+### Vec2 __mul(Vec2, number) {#Vec2-mul-Vec2-number}
 
-### Vec2 __mul(float, Vec2) {#Vec2-mul-float-Vec2}
+### Vec2 __mul(number, Vec2) {#Vec2-mul-number-Vec2}
 
 ### Vec2 __div(Vec2, Vec2) {#Vec2-div-Vec2-Vec2}
 
 ### Vec2 __div(Vec2, Vec2i) {#Vec2-div-Vec2-Vec2i}
 
-### Vec2 __div(Vec2, float) {#Vec2-div-Vec2-float}
+### Vec2 __div(Vec2, number) {#Vec2-div-Vec2-number}
 
-### Vec2 __div(float, Vec2) {#Vec2-div-float-Vec2}
+### Vec2 __div(number, Vec2) {#Vec2-div-number-Vec2}
 
 ### Vec2 __mod(Vec2, Vec2) {#Vec2-mod-Vec2-Vec2}
 
 ### Vec2 __mod(Vec2, Vec2i) {#Vec2-mod-Vec2-Vec2i}
 
-### Vec2 __mod(Vec2, float) {#Vec2-mod-Vec2-float}
+### Vec2 __mod(Vec2, number) {#Vec2-mod-Vec2-number}
 
-### Vec2 __mod(float, Vec2) {#Vec2-mod-float-Vec2}
+### Vec2 __mod(number, Vec2) {#Vec2-mod-number-Vec2}
 
 ### Vec2 __pow(Vec2, Vec2) {#Vec2-pow-Vec2-Vec2}
 
 ### Vec2 __pow(Vec2, Vec2i) {#Vec2-pow-Vec2-Vec2i}
 
-### Vec2 __pow(Vec2, float) {#Vec2-pow-Vec2-float}
+### Vec2 __pow(Vec2, number) {#Vec2-pow-Vec2-number}
 
-### Vec2 __pow(float, Vec2) {#Vec2-pow-float-Vec2}
+### Vec2 __pow(number, Vec2) {#Vec2-pow-number-Vec2}
 
 ### Vec2 __unm(Vec2) {#Vec2-unm-Vec2}
 
-### bool __eq(Vec2, Vec2) {#bool-eq-Vec2-Vec2}
+### boolean __eq(Vec2, Vec2) {#boolean-eq-Vec2-Vec2}
 
-### bool __eq(Vec2, Vec2i) {#bool-eq-Vec2-Vec2i}
+### boolean __eq(Vec2, Vec2i) {#boolean-eq-Vec2-Vec2i}
 
 ## Methods
 
-### float Len() {#float-Len}
+### number Len() {#number-Len}
 
-### float Length() {#float-Length}
+### number Length() {#number-Length}
 
-### float SqrLength() {#float-SqrLength}
+### number SqrLength() {#number-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec2 GetAbs() {#Vec2-GetAbs}
 
-### nil Clamp(Vec2, float, float) {#nil-Clamp-Vec2-float-float}
+### nil Clamp(Vec2, number, number) {#nil-Clamp-Vec2-number-number}
 
 ### nil Clamp(Vec2, Vec2, Vec2) {#nil-Clamp-Vec2-Vec2-Vec2}
 
-### Vec2 GetClamped(Vec2, float, float) {#Vec2-GetClamped-Vec2-float-float}
+### Vec2 GetClamped(Vec2, number, number) {#Vec2-GetClamped-Vec2-number-number}
 
 ### Vec2 GetClamped(Vec2, Vec2, Vec2) {#Vec2-GetClamped-Vec2-Vec2-Vec2}
 
-### float Dot(Vec2, Vec2) {#float-Dot-Vec2-Vec2}
+### number Dot(Vec2, Vec2) {#number-Dot-Vec2-Vec2}
 
-### float Dot(Vec2, Vec2i) {#float-Dot-Vec2-Vec2i}
+### number Dot(Vec2, Vec2i) {#number-Dot-Vec2-Vec2i}
 
-### bool IsAnyNaN() {#bool-IsAnyNaN}
+### boolean IsAnyNaN() {#boolean-IsAnyNaN}
 
-### Vec2 Lerp(Vec2, Vec2, float) {#Vec2-Lerp-Vec2-Vec2-float}
+### Vec2 Lerp(Vec2, Vec2, number) {#Vec2-Lerp-Vec2-Vec2-number}
 
 ### Vec2 Normalize() {#Vec2-Normalize}
 
@@ -137,21 +137,21 @@ id: Vec2
 
 ### Vec2 GetRounded(Vec2) {#Vec2-GetRounded-Vec2}
 
-### float DistanceTo(Vec2) {#float-DistanceTo-Vec2}
+### number DistanceTo(Vec2) {#number-DistanceTo-Vec2}
 
-### float GetAngle(Vec2) {#float-GetAngle-Vec2}
+### number GetAngle(Vec2) {#number-GetAngle-Vec2}
 
-### nil Rotate(Vec2, float) {#nil-Rotate-Vec2-float}
+### nil Rotate(Vec2, number) {#nil-Rotate-Vec2-number}
 
-### Vec2 GetRotated(Vec2, float) {#Vec2-GetRotated-Vec2-float}
+### Vec2 GetRotated(Vec2, number) {#Vec2-GetRotated-Vec2-number}
 
 ### string __tostring(Vec2) {#string-tostring-Vec2}
 
 ## Properties
 
-### float x {#float-x}
+### number x {#number-x}
 
-### float y {#float-y}
+### number y {#number-y}
 
 ### Vec2 zero {#Vec2-zero}
 
