--- a/docs/api/vec2i.mdx
+++ b/docs/api/vec2i.mdx
@@ -9,17 +9,17 @@ id: Vec2i
 
 ### Vec2i() {#Vec2i}
 
-### Vec2i(int) {#Vec2i-int}
+### Vec2i(integer) {#Vec2i-integer}
 
-### Vec2i(float) {#Vec2i-float}
+### Vec2i(number) {#Vec2i-number}
 
-### Vec2i(int, int) {#Vec2i-int-int}
+### Vec2i(integer, integer) {#Vec2i-integer-integer}
 
-### Vec2i(int, float) {#Vec2i-int-float}
+### Vec2i(integer, number) {#Vec2i-integer-number}
 
-### Vec2i(float, int) {#Vec2i-float-int}
+### Vec2i(number, integer) {#Vec2i-number-integer}
 
-### Vec2i(float, float) {#Vec2i-float-float}
+### Vec2i(number, number) {#Vec2i-number-number}
 
 ### Vec2i(Vec2i) {#Vec2i-Vec2i}
 
@@ -35,127 +35,127 @@ id: Vec2i
 
 ## Metamethods
 
-### int __index(Vec2i, int) {#int-index-Vec2i-int}
+### integer __index(Vec2i, integer) {#integer-index-Vec2i-integer}
 
-### nil __newindex(Vec2i, int, int) {#nil-newindex-Vec2i-int-int}
+### nil __newindex(Vec2i, integer, integer) {#nil-newindex-Vec2i-integer-integer}
 
 ### Vec2i __add(Vec2i, Vec2i) {#Vec2i-add-Vec2i-Vec2i}
 
 ### Vec2 __add(Vec2i, Vec2) {#Vec2-add-Vec2i-Vec2}
 
-### Vec2i __add(Vec2i, int) {#Vec2i-add-Vec2i-int}
+### Vec2i __add(Vec2i, integer) {#Vec2i-add-Vec2i-integer}
 
-### Vec2i __add(int, Vec2i) {#Vec2i-add-int-Vec2i}
+### Vec2i __add(integer, Vec2i) {#Vec2i-add-integer-Vec2i}
 
 ### Vec2i __sub(Vec2i, Vec2i) {#Vec2i-sub-Vec2i-Vec2i}
 
 ### Vec2 __sub(Vec2i, Vec2) {#Vec2-sub-Vec2i-Vec2}
 
-### Vec2i __sub(Vec2i, int) {#Vec2i-sub-Vec2i-int}
+### Vec2i __sub(Vec2i, integer) {#Vec2i-sub-Vec2i-integer}
 
-### Vec2i __sub(int, Vec2i) {#Vec2i-sub-int-Vec2i}
+### Vec2i __sub(integer, Vec2i) {#Vec2i-sub-integer-Vec2i}
 
 ### Vec2i __mul(Vec2i, Vec2i) {#Vec2i-mul-Vec2i-Vec2i}
 
 ### Vec2 __mul(Vec2i, Vec2) {#Vec2-mul-Vec2i-Vec2}
 
-### Vec2i __mul(Vec2i, int) {#Vec2i-mul-Vec2i-int}
+### Vec2i __mul(Vec2i, integer) {#Vec2i-mul-Vec2i-integer}
 
-### Vec2i __mul(int, Vec2i) {#Vec2i-mul-int-Vec2i}
+### Vec2i __mul(integer, Vec2i) {#Vec2i-mul-integer-Vec2i}
 
 ### Vec2i __div(Vec2i, Vec2i) {#Vec2i-div-Vec2i-Vec2i}
 
 ### Vec2 __div(Vec2i, Vec2) {#Vec2-div-Vec2i-Vec2}
 
-### Vec2i __div(Vec2i, int) {#Vec2i-div-Vec2i-int}
+### Vec2i __div(Vec2i, integer) {#Vec2i-div-Vec2i-integer}
 
-### Vec2i __div(int, Vec2i) {#Vec2i-div-int-Vec2i}
+### Vec2i __div(integer, Vec2i) {#Vec2i-div-integer-Vec2i}
 
 ### Vec2i __mod(Vec2i, Vec2i) {#Vec2i-mod-Vec2i-Vec2i}
 
 ### Vec2 __mod(Vec2i, Vec2) {#Vec2-mod-Vec2i-Vec2}
 
-### Vec2i __mod(Vec2i, int) {#Vec2i-mod-Vec2i-int}
+### Vec2i __mod(Vec2i, integer) {#Vec2i-mod-Vec2i-integer}
 
-### Vec2i __mod(int, Vec2i) {#Vec2i-mod-int-Vec2i}
+### Vec2i __mod(integer, Vec2i) {#Vec2i-mod-integer-Vec2i}
 
 ### Vec2i __pow(Vec2i, Vec2i) {#Vec2i-pow-Vec2i-Vec2i}
 
 ### Vec2 __pow(Vec2i, Vec2) {#Vec2-pow-Vec2i-Vec2}
 
-### Vec2i __pow(Vec2i, int) {#Vec2i-pow-Vec2i-int}
+### Vec2i __pow(Vec2i, integer) {#Vec2i-pow-Vec2i-integer}
 
-### Vec2i __pow(int, Vec2i) {#Vec2i-pow-int-Vec2i}
+### Vec2i __pow(integer, Vec2i) {#Vec2i-pow-integer-Vec2i}
 
 ### Vec2i __unm(Vec2i) {#Vec2i-unm-Vec2i}
 
-### bool __eq(Vec2i, Vec2i) {#bool-eq-Vec2i-Vec2i}
+### boolean __eq(Vec2i, Vec2i) {#boolean-eq-Vec2i-Vec2i}
 
-### bool __eq(Vec2i, Vec2) {#bool-eq-Vec2i-Vec2}
+### boolean __eq(Vec2i, Vec2) {#boolean-eq-Vec2i-Vec2}
 
 ## Methods
 
-### int Len() {#int-Len}
+### integer Len() {#integer-Len}
 
-### int Length() {#int-Length}
+### integer Length() {#integer-Length}
 
-### int SqrLength() {#int-SqrLength}
+### integer SqrLength() {#integer-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec2i GetAbs() {#Vec2i-GetAbs}
 
-### nil Clamp(Vec2i, int, int) {#nil-Clamp-Vec2i-int-int}
+### nil Clamp(Vec2i, integer, integer) {#nil-Clamp-Vec2i-integer-integer}
 
 ### nil Clamp(Vec2i, Vec2i, Vec2i) {#nil-Clamp-Vec2i-Vec2i-Vec2i}
 
-### Vec2i GetClamped(Vec2i, int, int) {#Vec2i-GetClamped-Vec2i-int-int}
+### Vec2i GetClamped(Vec2i, integer, integer) {#Vec2i-GetClamped-Vec2i-integer-integer}
 
 ### Vec2i GetClamped(Vec2i, Vec2i, Vec2i) {#Vec2i-GetClamped-Vec2i-Vec2i-Vec2i}
 
-### int Dot(Vec2i, Vec2i) {#int-Dot-Vec2i-Vec2i}
+### integer Dot(Vec2i, Vec2i) {#integer-Dot-Vec2i-Vec2i}
 
-### float Dot(Vec2i, Vec2) {#float-Dot-Vec2i-Vec2}
+### number Dot(Vec2i, Vec2) {#number-Dot-Vec2i-Vec2}
 
 ### Vec2i __band(Vec2i, Vec2i) {#Vec2i-band-Vec2i-Vec2i}
 
-### Vec2i __band(int, Vec2i) {#Vec2i-band-int-Vec2i}
+### Vec2i __band(integer, Vec2i) {#Vec2i-band-integer-Vec2i}
 
-### Vec2i __band(Vec2i, int) {#Vec2i-band-Vec2i-int}
+### Vec2i __band(Vec2i, integer) {#Vec2i-band-Vec2i-integer}
 
 ### Vec2i __bor(Vec2i, Vec2i) {#Vec2i-bor-Vec2i-Vec2i}
 
-### Vec2i __bor(int, Vec2i) {#Vec2i-bor-int-Vec2i}
+### Vec2i __bor(integer, Vec2i) {#Vec2i-bor-integer-Vec2i}
 
-### Vec2i __bor(Vec2i, int) {#Vec2i-bor-Vec2i-int}
+### Vec2i __bor(Vec2i, integer) {#Vec2i-bor-Vec2i-integer}
 
 ### Vec2i __bxor(Vec2i, Vec2i) {#Vec2i-bxor-Vec2i-Vec2i}
 
-### Vec2i __bxor(int, Vec2i) {#Vec2i-bxor-int-Vec2i}
+### Vec2i __bxor(integer, Vec2i) {#Vec2i-bxor-integer-Vec2i}
 
-### Vec2i __bxor(Vec2i, int) {#Vec2i-bxor-Vec2i-int}
+### Vec2i __bxor(Vec2i, integer) {#Vec2i-bxor-Vec2i-integer}
 
 ### Vec2i __bnot(Vec2i) {#Vec2i-bnot-Vec2i}
 
 ### Vec2i __shl(Vec2i, Vec2i) {#Vec2i-shl-Vec2i-Vec2i}
 
-### Vec2i __shl(int, Vec2i) {#Vec2i-shl-int-Vec2i}
+### Vec2i __shl(integer, Vec2i) {#Vec2i-shl-integer-Vec2i}
 
-### Vec2i __shl(Vec2i, int) {#Vec2i-shl-Vec2i-int}
+### Vec2i __shl(Vec2i, integer) {#Vec2i-shl-Vec2i-integer}
 
 ### Vec2i __shr(Vec2i, Vec2i) {#Vec2i-shr-Vec2i-Vec2i}
 
-### Vec2i __shr(int, Vec2i) {#Vec2i-shr-int-Vec2i}
+### Vec2i __shr(integer, Vec2i) {#Vec2i-shr-integer-Vec2i}
 
-### Vec2i __shr(Vec2i, int) {#Vec2i-shr-Vec2i-int}
+### Vec2i __shr(Vec2i, integer) {#Vec2i-shr-Vec2i-integer}
 
 ### string __tostring(Vec2i) {#string-tostring-Vec2i}
 
 ## Properties
 
-### int x {#int-x}
+### integer x {#integer-x}
 
-### int y {#int-y}
+### integer y {#integer-y}
 
 ### Vec2i zero {#Vec2i-zero}
 
