--- a/docs/api/vec3.mdx
+++ b/docs/api/vec3.mdx
@@ -11,41 +11,41 @@ id: vec3
 
 ### Vec3() {#Vec3}
 
-### Vec3(float) {#Vec3-float}
+### Vec3(number) {#Vec3-number}
 
-### Vec3(int) {#Vec3-int}
+### Vec3(integer) {#Vec3-integer}
 
-### Vec3(float, float, float) {#Vec3-float-float-float}
+### Vec3(number, number, number) {#Vec3-number-number-number}
 
-### Vec3(float, float, int) {#Vec3-float-float-int}
+### Vec3(number, number, integer) {#Vec3-number-number-integer}
 
-### Vec3(float, int, float) {#Vec3-float-int-float}
+### Vec3(number, integer, number) {#Vec3-number-integer-number}
 
-### Vec3(float, int, int) {#Vec3-float-int-int}
+### Vec3(number, integer, integer) {#Vec3-number-integer-integer}
 
-### Vec3(int, float, float) {#Vec3-int-float-float}
+### Vec3(integer, number, number) {#Vec3-integer-number-number}
 
-### Vec3(int, float, int) {#Vec3-int-float-int}
+### Vec3(integer, number, integer) {#Vec3-integer-number-integer}
 
-### Vec3(int, int, float) {#Vec3-int-int-float}
+### Vec3(integer, integer, number) {#Vec3-integer-integer-number}
 
-### Vec3(int, int, int) {#Vec3-int-int-int}
+### Vec3(integer, integer, integer) {#Vec3-integer-integer-integer}
 
-### Vec3(Vec2, float) {#Vec3-Vec2-float}
+### Vec3(Vec2, number) {#Vec3-Vec2-number}
 
-### Vec3(Vec2, int) {#Vec3-Vec2-int}
+### Vec3(Vec2, integer) {#Vec3-Vec2-integer}
 
-### Vec3(Vec2i, float) {#Vec3-Vec2i-float}
+### Vec3(Vec2i, number) {#Vec3-Vec2i-number}
 
-### Vec3(Vec2i, int) {#Vec3-Vec2i-int}
+### Vec3(Vec2i, integer) {#Vec3-Vec2i-integer}
 
-### Vec3(float, Vec2) {#Vec3-float-Vec2}
+### Vec3(number, Vec2) {#Vec3-number-Vec2}
 
-### Vec3(float, Vec2i) {#Vec3-float-Vec2i}
+### Vec3(number, Vec2i) {#Vec3-number-Vec2i}
 
-### Vec3(int, Vec2) {#Vec3-int-Vec2}
+### Vec3(integer, Vec2) {#Vec3-integer-Vec2}
 
-### Vec3(int, Vec2i) {#Vec3-int-Vec2i}
+### Vec3(integer, Vec2i) {#Vec3-integer-Vec2i}
 
 ### Vec3(Vec3) {#Vec3-Vec3}
 
@@ -57,91 +57,91 @@ id: vec3
 
 ## Metamethods
 
-### float __index(Vec3, int) {#float-index-Vec3-int}
+### number __index(Vec3, integer) {#number-index-Vec3-integer}
 
-### nil __newindex(Vec3, int, float) {#nil-newindex-Vec3-int-float}
+### nil __newindex(Vec3, integer, number) {#nil-newindex-Vec3-integer-number}
 
 ### Vec3 __add(Vec3, Vec3) {#Vec3-add-Vec3-Vec3}
 
 ### Vec3 __add(Vec3, Vec3i) {#Vec3-add-Vec3-Vec3i}
 
-### Vec3 __add(Vec3, float) {#Vec3-add-Vec3-float}
+### Vec3 __add(Vec3, number) {#Vec3-add-Vec3-number}
 
-### Vec3 __add(float, Vec3) {#Vec3-add-float-Vec3}
+### Vec3 __add(number, Vec3) {#Vec3-add-number-Vec3}
 
 ### Vec3 __sub(Vec3, Vec3) {#Vec3-sub-Vec3-Vec3}
 
 ### Vec3 __sub(Vec3, Vec3i) {#Vec3-sub-Vec3-Vec3i}
 
-### Vec3 __sub(Vec3, float) {#Vec3-sub-Vec3-float}
+### Vec3 __sub(Vec3, number) {#Vec3-sub-Vec3-number}
 
-### Vec3 __sub(float, Vec3) {#Vec3-sub-float-Vec3}
+### Vec3 __sub(number, Vec3) {#Vec3-sub-number-Vec3}
 
 ### Vec3 __mul(Vec3, Vec3) {#Vec3-mul-Vec3-Vec3}
 
 ### Vec3 __mul(Vec3, Vec3i) {#Vec3-mul-Vec3-Vec3i}
 
-### Vec3 __mul(Vec3, float) {#Vec3-mul-Vec3-float}
+### Vec3 __mul(Vec3, number) {#Vec3-mul-Vec3-number}
 
-### Vec3 __mul(float, Vec3) {#Vec3-mul-float-Vec3}
+### Vec3 __mul(number, Vec3) {#Vec3-mul-number-Vec3}
 
 ### Vec3 __div(Vec3, Vec3) {#Vec3-div-Vec3-Vec3}
 
 ### Vec3 __div(Vec3, Vec3i) {#Vec3-div-Vec3-Vec3i}
 
-### Vec3 __div(Vec3, float) {#Vec3-div-Vec3-float}
+### Vec3 __div(Vec3, number) {#Vec3-div-Vec3-number}
 
-### Vec3 __div(float, Vec3) {#Vec3-div-float-Vec3}
+### Vec3 __div(number, Vec3) {#Vec3-div-number-Vec3}
 
 ### Vec3 __mod(Vec3, Vec3) {#Vec3-mod-Vec3-Vec3}
 
 ### Vec3 __mod(Vec3, Vec3i) {#Vec3-mod-Vec3-Vec3i}
 
-### Vec3 __mod(Vec3, float) {#Vec3-mod-Vec3-float}
+### Vec3 __mod(Vec3, number) {#Vec3-mod-Vec3-number}
 
-### Vec3 __mod(float, Vec3) {#Vec3-mod-float-Vec3}
+### Vec3 __mod(number, Vec3) {#Vec3-mod-number-Vec3}
 
 ### Vec3 __pow(Vec3, Vec3) {#Vec3-pow-Vec3-Vec3}
 
 ### Vec3 __pow(Vec3, Vec3i) {#Vec3-pow-Vec3-Vec3i}
 
-### Vec3 __pow(Vec3, float) {#Vec3-pow-Vec3-float}
+### Vec3 __pow(Vec3, number) {#Vec3-pow-Vec3-number}
 
-### Vec3 __pow(float, Vec3) {#Vec3-pow-float-Vec3}
+### Vec3 __pow(number, Vec3) {#Vec3-pow-number-Vec3}
 
 ### Vec3 __unm(Vec3) {#Vec3-unm-Vec3}
 
-### bool __eq(Vec3, Vec3) {#bool-eq-Vec3-Vec3}
+### boolean __eq(Vec3, Vec3) {#boolean-eq-Vec3-Vec3}
 
-### bool __eq(Vec3, Vec3i) {#bool-eq-Vec3-Vec3i}
+### boolean __eq(Vec3, Vec3i) {#boolean-eq-Vec3-Vec3i}
 
 ## Methods
 
-### float Len() {#float-Len}
+### number Len() {#number-Len}
 
-### float Length() {#float-Length}
+### number Length() {#number-Length}
 
-### float SqrLength() {#float-SqrLength}
+### number SqrLength() {#number-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec3 GetAbs() {#Vec3-GetAbs}
 
-### nil Clamp(Vec3, float, float) {#nil-Clamp-Vec3-float-float}
+### nil Clamp(Vec3, number, number) {#nil-Clamp-Vec3-number-number}
 
 ### nil Clamp(Vec3, Vec3, Vec3) {#nil-Clamp-Vec3-Vec3-Vec3}
 
-### Vec3 GetClamped(Vec3, float, float) {#Vec3-GetClamped-Vec3-float-float}
+### Vec3 GetClamped(Vec3, number, number) {#Vec3-GetClamped-Vec3-number-number}
 
 ### Vec3 GetClamped(Vec3, Vec3, Vec3) {#Vec3-GetClamped-Vec3-Vec3-Vec3}
 
-### float Dot(Vec3, Vec3) {#float-Dot-Vec3-Vec3}
+### number Dot(Vec3, Vec3) {#number-Dot-Vec3-Vec3}
 
-### float Dot(Vec3, Vec3i) {#float-Dot-Vec3-Vec3i}
+### number Dot(Vec3, Vec3i) {#number-Dot-Vec3-Vec3i}
 
-### bool IsAnyNaN() {#bool-IsAnyNaN}
+### boolean IsAnyNaN() {#boolean-IsAnyNaN}
 
-### Vec3 Lerp(Vec3, Vec3, float) {#Vec3-Lerp-Vec3-Vec3-float}
+### Vec3 Lerp(Vec3, Vec3, number) {#Vec3-Lerp-Vec3-Vec3-number}
 
 ### Vec3 Normalize() {#Vec3-Normalize}
 
@@ -159,7 +159,7 @@ id: vec3
 
 ### Vec3 GetRounded(Vec3) {#Vec3-GetRounded-Vec3}
 
-### float DistanceTo(Vec3) {#float-DistanceTo-Vec3}
+### number DistanceTo(Vec3) {#number-DistanceTo-Vec3}
 
 ### Vec3 Cross(Vec3, Vec3) {#Vec3-Cross-Vec3-Vec3}
 
@@ -169,11 +169,11 @@ id: vec3
 
 ## Properties
 
-### float x {#float-x}
+### number x {#number-x}
 
-### float y {#float-y}
+### number y {#number-y}
 
-### float z {#float-z}
+### number z {#number-z}
 
 ### Vec3 zero {#Vec3-zero}
 
