--- a/docs/api/vec4.mdx
+++ b/docs/api/vec4.mdx
@@ -9,89 +9,89 @@ id: Vec4
 
 ### Vec4() {#Vec4}
 
-### Vec4(float) {#Vec4-float}
+### Vec4(number) {#Vec4-number}
 
-### Vec4(int) {#Vec4-int}
+### Vec4(integer) {#Vec4-integer}
 
-### Vec4(float, float, float, float) {#Vec4-float-float-float-float}
+### Vec4(number, number, number, number) {#Vec4-number-number-number-number}
 
-### Vec4(float, float, float, int) {#Vec4-float-float-float-int}
+### Vec4(number, number, number, integer) {#Vec4-number-number-number-integer}
 
-### Vec4(float, float, int, float) {#Vec4-float-float-int-float}
+### Vec4(number, number, integer, number) {#Vec4-number-number-integer-number}
 
-### Vec4(float, float, int, int) {#Vec4-float-float-int-int}
+### Vec4(number, number, integer, integer) {#Vec4-number-number-integer-integer}
 
-### Vec4(float, int, float, float) {#Vec4-float-int-float-float}
+### Vec4(number, integer, number, number) {#Vec4-number-integer-number-number}
 
-### Vec4(float, int, float, int) {#Vec4-float-int-float-int}
+### Vec4(number, integer, number, integer) {#Vec4-number-integer-number-integer}
 
-### Vec4(float, int, int, float) {#Vec4-float-int-int-float}
+### Vec4(number, integer, integer, number) {#Vec4-number-integer-integer-number}
 
-### Vec4(float, int, int, int) {#Vec4-float-int-int-int}
+### Vec4(number, integer, integer, integer) {#Vec4-number-integer-integer-integer}
 
-### Vec4(int, float, float, float) {#Vec4-int-float-float-float}
+### Vec4(integer, number, number, number) {#Vec4-integer-number-number-number}
 
-### Vec4(int, float, float, int) {#Vec4-int-float-float-int}
+### Vec4(integer, number, number, integer) {#Vec4-integer-number-number-integer}
 
-### Vec4(int, float, int, float) {#Vec4-int-float-int-float}
+### Vec4(integer, number, integer, number) {#Vec4-integer-number-integer-number}
 
-### Vec4(int, float, int, int) {#Vec4-int-float-int-int}
+### Vec4(integer, number, integer, integer) {#Vec4-integer-number-integer-integer}
 
-### Vec4(int, int, float, float) {#Vec4-int-int-float-float}
+### Vec4(integer, integer, number, number) {#Vec4-integer-integer-number-number}
 
-### Vec4(int, int, float, int) {#Vec4-int-int-float-int}
+### Vec4(integer, integer, number, integer) {#Vec4-integer-integer-number-integer}
 
-### Vec4(int, int, int, float) {#Vec4-int-int-int-float}
+### Vec4(integer, integer, integer, number) {#Vec4-integer-integer-integer-number}
 
-### Vec4(int, int, int, int) {#Vec4-int-int-int-int}
+### Vec4(integer, integer, integer, integer) {#Vec4-integer-integer-integer-integer}
 
-### Vec4(Vec2, float, float) {#Vec4-Vec2-float-float}
+### Vec4(Vec2, number, number) {#Vec4-Vec2-number-number}
 
-### Vec4(Vec2, float, int) {#Vec4-Vec2-float-int}
+### Vec4(Vec2, number, integer) {#Vec4-Vec2-number-integer}
 
-### Vec4(Vec2, int, float) {#Vec4-Vec2-int-float}
+### Vec4(Vec2, integer, number) {#Vec4-Vec2-integer-number}
 
-### Vec4(Vec2, int, int) {#Vec4-Vec2-int-int}
+### Vec4(Vec2, integer, integer) {#Vec4-Vec2-integer-integer}
 
-### Vec4(Vec2i, float, float) {#Vec4-Vec2i-float-float}
+### Vec4(Vec2i, number, number) {#Vec4-Vec2i-number-number}
 
-### Vec4(Vec2i, float, int) {#Vec4-Vec2i-float-int}
+### Vec4(Vec2i, number, integer) {#Vec4-Vec2i-number-integer}
 
-### Vec4(Vec2i, int, float) {#Vec4-Vec2i-int-float}
+### Vec4(Vec2i, integer, number) {#Vec4-Vec2i-integer-number}
 
-### Vec4(Vec2i, int, int) {#Vec4-Vec2i-int-int}
+### Vec4(Vec2i, integer, integer) {#Vec4-Vec2i-integer-integer}
 
-### Vec4(float, Vec2, float) {#Vec4-float-Vec2-float}
+### Vec4(number, Vec2, number) {#Vec4-number-Vec2-number}
 
-### Vec4(float, Vec2, int) {#Vec4-float-Vec2-int}
+### Vec4(number, Vec2, integer) {#Vec4-number-Vec2-integer}
 
-### Vec4(float, Vec2i, float) {#Vec4-float-Vec2i-float}
+### Vec4(number, Vec2i, number) {#Vec4-number-Vec2i-number}
 
-### Vec4(float, Vec2i, int) {#Vec4-float-Vec2i-int}
+### Vec4(number, Vec2i, integer) {#Vec4-number-Vec2i-integer}
 
-### Vec4(int, Vec2, float) {#Vec4-int-Vec2-float}
+### Vec4(integer, Vec2, number) {#Vec4-integer-Vec2-number}
 
-### Vec4(int, Vec2, int) {#Vec4-int-Vec2-int}
+### Vec4(integer, Vec2, integer) {#Vec4-integer-Vec2-integer}
 
-### Vec4(int, Vec2i, float) {#Vec4-int-Vec2i-float}
+### Vec4(integer, Vec2i, number) {#Vec4-integer-Vec2i-number}
 
-### Vec4(int, Vec2i, int) {#Vec4-int-Vec2i-int}
+### Vec4(integer, Vec2i, integer) {#Vec4-integer-Vec2i-integer}
 
-### Vec4(float, float, Vec2) {#Vec4-float-float-Vec2}
+### Vec4(number, number, Vec2) {#Vec4-number-number-Vec2}
 
-### Vec4(float, float, Vec2i) {#Vec4-float-float-Vec2i}
+### Vec4(number, number, Vec2i) {#Vec4-number-number-Vec2i}
 
-### Vec4(float, int, Vec2) {#Vec4-float-int-Vec2}
+### Vec4(number, integer, Vec2) {#Vec4-number-integer-Vec2}
 
-### Vec4(float, int, Vec2i) {#Vec4-float-int-Vec2i}
+### Vec4(number, integer, Vec2i) {#Vec4-number-integer-Vec2i}
 
-### Vec4(int, float, Vec2) {#Vec4-int-float-Vec2}
+### Vec4(integer, number, Vec2) {#Vec4-integer-number-Vec2}
 
-### Vec4(int, float, Vec2i) {#Vec4-int-float-Vec2i}
+### Vec4(integer, number, Vec2i) {#Vec4-integer-number-Vec2i}
 
-### Vec4(int, int, Vec2) {#Vec4-int-int-Vec2}
+### Vec4(integer, integer, Vec2) {#Vec4-integer-integer-Vec2}
 
-### Vec4(int, int, Vec2i) {#Vec4-int-int-Vec2i}
+### Vec4(integer, integer, Vec2i) {#Vec4-integer-integer-Vec2i}
 
 ### Vec4(Vec2, Vec2) {#Vec4-Vec2-Vec2}
 
@@ -101,21 +101,21 @@ id: Vec4
 
 ### Vec4(Vec2i, Vec2i) {#Vec4-Vec2i-Vec2i}
 
-### Vec4(Vec3, float) {#Vec4-Vec3-float}
+### Vec4(Vec3, number) {#Vec4-Vec3-number}
 
-### Vec4(Vec3, int) {#Vec4-Vec3-int}
+### Vec4(Vec3, integer) {#Vec4-Vec3-integer}
 
-### Vec4(Vec3i, float) {#Vec4-Vec3i-float}
+### Vec4(Vec3i, number) {#Vec4-Vec3i-number}
 
-### Vec4(Vec3i, int) {#Vec4-Vec3i-int}
+### Vec4(Vec3i, integer) {#Vec4-Vec3i-integer}
 
-### Vec4(float, Vec3) {#Vec4-float-Vec3}
+### Vec4(number, Vec3) {#Vec4-number-Vec3}
 
-### Vec4(float, Vec3i) {#Vec4-float-Vec3i}
+### Vec4(number, Vec3i) {#Vec4-number-Vec3i}
 
-### Vec4(int, Vec3) {#Vec4-int-Vec3}
+### Vec4(integer, Vec3) {#Vec4-integer-Vec3}
 
-### Vec4(int, Vec3i) {#Vec4-int-Vec3i}
+### Vec4(integer, Vec3i) {#Vec4-integer-Vec3i}
 
 ### Vec4(Vec4) {#Vec4-Vec4}
 
@@ -123,25 +123,25 @@ id: Vec4
 
 ## Metamethods
 
-### float __index(Vec4, int) {#float-index-Vec4-int}
+### number __index(Vec4, integer) {#number-index-Vec4-integer}
 
-### nil __newindex(Vec4, int, float) {#nil-newindex-Vec4-int-float}
+### nil __newindex(Vec4, integer, number) {#nil-newindex-Vec4-integer-number}
 
 ### Vec4 __add(Vec4, Vec4) {#Vec4-add-Vec4-Vec4}
 
 ### Vec4 __add(Vec4, Vec4i) {#Vec4-add-Vec4-Vec4i}
 
-### Vec4 __add(Vec4, float) {#Vec4-add-Vec4-float}
+### Vec4 __add(Vec4, number) {#Vec4-add-Vec4-number}
 
-### Vec4 __add(float, Vec4) {#Vec4-add-float-Vec4}
+### Vec4 __add(number, Vec4) {#Vec4-add-number-Vec4}
 
 ### Vec4 __sub(Vec4, Vec4) {#Vec4-sub-Vec4-Vec4}
 
 ### Vec4 __sub(Vec4, Vec4i) {#Vec4-sub-Vec4-Vec4i}
 
-### Vec4 __sub(Vec4, float) {#Vec4-sub-Vec4-float}
+### Vec4 __sub(Vec4, number) {#Vec4-sub-Vec4-number}
 
-### Vec4 __sub(float, Vec4) {#Vec4-sub-float-Vec4}
+### Vec4 __sub(number, Vec4) {#Vec4-sub-number-Vec4}
 
 ### Vec4 __mul(Vec4, Vec4) {#Vec4-mul-Vec4-Vec4}
 
@@ -149,67 +149,67 @@ id: Vec4
 
 ### Vec4 __mul(Vec4, Mat4) {#Vec4-mul-Vec4-Mat4}
 
-### Vec4 __mul(Vec4, float) {#Vec4-mul-Vec4-float}
+### Vec4 __mul(Vec4, number) {#Vec4-mul-Vec4-number}
 
-### Vec4 __mul(float, Vec4) {#Vec4-mul-float-Vec4}
+### Vec4 __mul(number, Vec4) {#Vec4-mul-number-Vec4}
 
 ### Vec4 __div(Vec4, Vec4) {#Vec4-div-Vec4-Vec4}
 
 ### Vec4 __div(Vec4, Vec4i) {#Vec4-div-Vec4-Vec4i}
 
-### Vec4 __div(Vec4, float) {#Vec4-div-Vec4-float}
+### Vec4 __div(Vec4, number) {#Vec4-div-Vec4-number}
 
-### Vec4 __div(float, Vec4) {#Vec4-div-float-Vec4}
+### Vec4 __div(number, Vec4) {#Vec4-div-number-Vec4}
 
 ### Vec4 __mod(Vec4, Vec4) {#Vec4-mod-Vec4-Vec4}
 
 ### Vec4 __mod(Vec4, Vec4i) {#Vec4-mod-Vec4-Vec4i}
 
-### Vec4 __mod(Vec4, float) {#Vec4-mod-Vec4-float}
+### Vec4 __mod(Vec4, number) {#Vec4-mod-Vec4-number}
 
-### Vec4 __mod(float, Vec4) {#Vec4-mod-float-Vec4}
+### Vec4 __mod(number, Vec4) {#Vec4-mod-number-Vec4}
 
 ### Vec4 __pow(Vec4, Vec4) {#Vec4-pow-Vec4-Vec4}
 
 ### Vec4 __pow(Vec4, Vec4i) {#Vec4-pow-Vec4-Vec4i}
 
-### Vec4 __pow(Vec4, float) {#Vec4-pow-Vec4-float}
+### Vec4 __pow(Vec4, number) {#Vec4-pow-Vec4-number}
 
-### Vec4 __pow(float, Vec4) {#Vec4-pow-float-Vec4}
+### Vec4 __pow(number, Vec4) {#Vec4-pow-number-Vec4}
 
 ### Vec4 __unm(Vec4) {#Vec4-unm-Vec4}
 
-### bool __eq(Vec4, Vec4) {#bool-eq-Vec4-Vec4}
+### boolean __eq(Vec4, Vec4) {#boolean-eq-Vec4-Vec4}
 
-### bool __eq(Vec4, Vec4i) {#bool-eq-Vec4-Vec4i}
+### boolean __eq(Vec4, Vec4i) {#boolean-eq-Vec4-Vec4i}
 
 ## Methods
 
-### float Len() {#float-Len}
+### number Len() {#number-Len}
 
-### float Length() {#float-Length}
+### number Length() {#number-Length}
 
-### float SqrLength() {#float-SqrLength}
+### number SqrLength() {#number-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec4 GetAbs() {#Vec4-GetAbs}
 
-### nil Clamp(Vec4, float, float) {#nil-Clamp-Vec4-float-float}
+### nil Clamp(Vec4, number, number) {#nil-Clamp-Vec4-number-number}
 
 ### nil Clamp(Vec4, Vec4, Vec4) {#nil-Clamp-Vec4-Vec4-Vec4}
 
-### Vec4 GetClamped(Vec4, float, float) {#Vec4-GetClamped-Vec4-float-float}
+### Vec4 GetClamped(Vec4, number, number) {#Vec4-GetClamped-Vec4-number-number}
 
 ### Vec4 GetClamped(Vec4, Vec4, Vec4) {#Vec4-GetClamped-Vec4-Vec4-Vec4}
 
-### float Dot(Vec4, Vec4) {#float-Dot-Vec4-Vec4}
+### number Dot(Vec4, Vec4) {#number-Dot-Vec4-Vec4}
 
-### float Dot(Vec4, Vec4i) {#float-Dot-Vec4-Vec4i}
+### number Dot(Vec4, Vec4i) {#number-Dot-Vec4-Vec4i}
 
-### bool IsAnyNaN() {#bool-IsAnyNaN}
+### boolean IsAnyNaN() {#boolean-IsAnyNaN}
 
-### Vec4 Lerp(Vec4, Vec4, float) {#Vec4-Lerp-Vec4-Vec4-float}
+### Vec4 Lerp(Vec4, Vec4, number) {#Vec4-Lerp-Vec4-Vec4-number}
 
 ### Vec4 Normalize() {#Vec4-Normalize}
 
@@ -227,19 +227,19 @@ id: Vec4
 
 ### Vec4 GetRounded(Vec4) {#Vec4-GetRounded-Vec4}
 
-### float DistanceTo(Vec4) {#float-DistanceTo-Vec4}
+### number DistanceTo(Vec4) {#number-DistanceTo-Vec4}
 
 ### string __tostring(Vec4) {#string-tostring-Vec4}
 
 ## Properties
 
-### float x {#float-x}
+### number x {#number-x}
 
-### float y {#float-y}
+### number y {#number-y}
 
-### float z {#float-z}
+### number z {#number-z}
 
-### float w {#float-w}
+### number w {#number-w}
 
 ### Vec4 zero {#Vec4-zero}
 
