--- a/docs/api/vec4i.mdx
+++ b/docs/api/vec4i.mdx
@@ -9,89 +9,89 @@ id: Vec4i
 
 ### Vec4i() {#Vec4i}
 
-### Vec4i(int) {#Vec4i-int}
+### Vec4i(integer) {#Vec4i-integer}
 
-### Vec4i(float) {#Vec4i-float}
+### Vec4i(number) {#Vec4i-number}
 
-### Vec4i(int, int, int, int) {#Vec4i-int-int-int-int}
+### Vec4i(integer, integer, integer, integer) {#Vec4i-integer-integer-integer-integer}
 
-### Vec4i(int, int, int, float) {#Vec4i-int-int-int-float}
+### Vec4i(integer, integer, integer, number) {#Vec4i-integer-integer-integer-number}
 
-### Vec4i(int, int, float, int) {#Vec4i-int-int-float-int}
+### Vec4i(integer, integer, number, integer) {#Vec4i-integer-integer-number-integer}
 
-### Vec4i(int, int, float, float) {#Vec4i-int-int-float-float}
+### Vec4i(integer, integer, number, number) {#Vec4i-integer-integer-number-number}
 
-### Vec4i(int, float, int, int) {#Vec4i-int-float-int-int}
+### Vec4i(integer, number, integer, integer) {#Vec4i-integer-number-integer-integer}
 
-### Vec4i(int, float, int, float) {#Vec4i-int-float-int-float}
+### Vec4i(integer, number, integer, number) {#Vec4i-integer-number-integer-number}
 
-### Vec4i(int, float, float, int) {#Vec4i-int-float-float-int}
+### Vec4i(integer, number, number, integer) {#Vec4i-integer-number-number-integer}
 
-### Vec4i(int, float, float, float) {#Vec4i-int-float-float-float}
+### Vec4i(integer, number, number, number) {#Vec4i-integer-number-number-number}
 
-### Vec4i(float, int, int, int) {#Vec4i-float-int-int-int}
+### Vec4i(number, integer, integer, integer) {#Vec4i-number-integer-integer-integer}
 
-### Vec4i(float, int, int, float) {#Vec4i-float-int-int-float}
+### Vec4i(number, integer, integer, number) {#Vec4i-number-integer-integer-number}
 
-### Vec4i(float, int, float, int) {#Vec4i-float-int-float-int}
+### Vec4i(number, integer, number, integer) {#Vec4i-number-integer-number-integer}
 
-### Vec4i(float, int, float, float) {#Vec4i-float-int-float-float}
+### Vec4i(number, integer, number, number) {#Vec4i-number-integer-number-number}
 
-### Vec4i(float, float, int, int) {#Vec4i-float-float-int-int}
+### Vec4i(number, number, integer, integer) {#Vec4i-number-number-integer-integer}
 
-### Vec4i(float, float, int, float) {#Vec4i-float-float-int-float}
+### Vec4i(number, number, integer, number) {#Vec4i-number-number-integer-number}
 
-### Vec4i(float, float, float, int) {#Vec4i-float-float-float-int}
+### Vec4i(number, number, number, integer) {#Vec4i-number-number-number-integer}
 
-### Vec4i(float, float, float, float) {#Vec4i-float-float-float-float}
+### Vec4i(number, number, number, number) {#Vec4i-number-number-number-number}
 
-### Vec4i(Vec2i, int, int) {#Vec4i-Vec2i-int-int}
+### Vec4i(Vec2i, integer, integer) {#Vec4i-Vec2i-integer-integer}
 
-### Vec4i(Vec2i, int, float) {#Vec4i-Vec2i-int-float}
+### Vec4i(Vec2i, integer, number) {#Vec4i-Vec2i-integer-number}
 
-### Vec4i(Vec2i, float, int) {#Vec4i-Vec2i-float-int}
+### Vec4i(Vec2i, number, integer) {#Vec4i-Vec2i-number-integer}
 
-### Vec4i(Vec2i, float, float) {#Vec4i-Vec2i-float-float}
+### Vec4i(Vec2i, number, number) {#Vec4i-Vec2i-number-number}
 
-### Vec4i(Vec2, int, int) {#Vec4i-Vec2-int-int}
+### Vec4i(Vec2, integer, integer) {#Vec4i-Vec2-integer-integer}
 
-### Vec4i(Vec2, int, float) {#Vec4i-Vec2-int-float}
+### Vec4i(Vec2, integer, number) {#Vec4i-Vec2-integer-number}
 
-### Vec4i(Vec2, float, int) {#Vec4i-Vec2-float-int}
+### Vec4i(Vec2, number, integer) {#Vec4i-Vec2-number-integer}
 
-### Vec4i(Vec2, float, float) {#Vec4i-Vec2-float-float}
+### Vec4i(Vec2, number, number) {#Vec4i-Vec2-number-number}
 
-### Vec4i(int, Vec2i, int) {#Vec4i-int-Vec2i-int}
+### Vec4i(integer, Vec2i, integer) {#Vec4i-integer-Vec2i-integer}
 
-### Vec4i(int, Vec2i, float) {#Vec4i-int-Vec2i-float}
+### Vec4i(integer, Vec2i, number) {#Vec4i-integer-Vec2i-number}
 
-### Vec4i(int, Vec2, int) {#Vec4i-int-Vec2-int}
+### Vec4i(integer, Vec2, integer) {#Vec4i-integer-Vec2-integer}
 
-### Vec4i(int, Vec2, float) {#Vec4i-int-Vec2-float}
+### Vec4i(integer, Vec2, number) {#Vec4i-integer-Vec2-number}
 
-### Vec4i(float, Vec2i, int) {#Vec4i-float-Vec2i-int}
+### Vec4i(number, Vec2i, integer) {#Vec4i-number-Vec2i-integer}
 
-### Vec4i(float, Vec2i, float) {#Vec4i-float-Vec2i-float}
+### Vec4i(number, Vec2i, number) {#Vec4i-number-Vec2i-number}
 
-### Vec4i(float, Vec2, int) {#Vec4i-float-Vec2-int}
+### Vec4i(number, Vec2, integer) {#Vec4i-number-Vec2-integer}
 
-### Vec4i(float, Vec2, float) {#Vec4i-float-Vec2-float}
+### Vec4i(number, Vec2, number) {#Vec4i-number-Vec2-number}
 
-### Vec4i(int, int, Vec2i) {#Vec4i-int-int-Vec2i}
+### Vec4i(integer, integer, Vec2i) {#Vec4i-integer-integer-Vec2i}
 
-### Vec4i(int, int, Vec2) {#Vec4i-int-int-Vec2}
+### Vec4i(integer, integer, Vec2) {#Vec4i-integer-integer-Vec2}
 
-### Vec4i(int, float, Vec2i) {#Vec4i-int-float-Vec2i}
+### Vec4i(integer, number, Vec2i) {#Vec4i-integer-number-Vec2i}
 
-### Vec4i(int, float, Vec2) {#Vec4i-int-float-Vec2}
+### Vec4i(integer, number, Vec2) {#Vec4i-integer-number-Vec2}
 
-### Vec4i(float, int, Vec2i) {#Vec4i-float-int-Vec2i}
+### Vec4i(number, integer, Vec2i) {#Vec4i-number-integer-Vec2i}
 
-### Vec4i(float, int, Vec2) {#Vec4i-float-int-Vec2}
+### Vec4i(number, integer, Vec2) {#Vec4i-number-integer-Vec2}
 
-### Vec4i(float, float, Vec2i) {#Vec4i-float-float-Vec2i}
+### Vec4i(number, number, Vec2i) {#Vec4i-number-number-Vec2i}
 
-### Vec4i(float, float, Vec2) {#Vec4i-float-float-Vec2}
+### Vec4i(number, number, Vec2) {#Vec4i-number-number-Vec2}
 
 ### Vec4i(Vec2i, Vec2i) {#Vec4i-Vec2i-Vec2i}
 
@@ -101,21 +101,21 @@ id: Vec4i
 
 ### Vec4i(Vec2, Vec2) {#Vec4i-Vec2-Vec2}
 
-### Vec4i(Vec3i, int) {#Vec4i-Vec3i-int}
+### Vec4i(Vec3i, integer) {#Vec4i-Vec3i-integer}
 
-### Vec4i(Vec3i, float) {#Vec4i-Vec3i-float}
+### Vec4i(Vec3i, number) {#Vec4i-Vec3i-number}
 
-### Vec4i(Vec3, int) {#Vec4i-Vec3-int}
+### Vec4i(Vec3, integer) {#Vec4i-Vec3-integer}
 
-### Vec4i(Vec3, float) {#Vec4i-Vec3-float}
+### Vec4i(Vec3, number) {#Vec4i-Vec3-number}
 
-### Vec4i(int, Vec3i) {#Vec4i-int-Vec3i}
+### Vec4i(integer, Vec3i) {#Vec4i-integer-Vec3i}
 
-### Vec4i(int, Vec3) {#Vec4i-int-Vec3}
+### Vec4i(integer, Vec3) {#Vec4i-integer-Vec3}
 
-### Vec4i(float, Vec3i) {#Vec4i-float-Vec3i}
+### Vec4i(number, Vec3i) {#Vec4i-number-Vec3i}
 
-### Vec4i(float, Vec3) {#Vec4i-float-Vec3}
+### Vec4i(number, Vec3) {#Vec4i-number-Vec3}
 
 ### Vec4i(Vec4i) {#Vec4i-Vec4i}
 
@@ -123,25 +123,25 @@ id: Vec4i
 
 ## Metamethods
 
-### int __index(Vec4i, int) {#int-index-Vec4i-int}
+### integer __index(Vec4i, integer) {#integer-index-Vec4i-integer}
 
-### nil __newindex(Vec4i, int, int) {#nil-newindex-Vec4i-int-int}
+### nil __newindex(Vec4i, integer, integer) {#nil-newindex-Vec4i-integer-integer}
 
 ### Vec4i __add(Vec4i, Vec4i) {#Vec4i-add-Vec4i-Vec4i}
 
 ### Vec4 __add(Vec4i, Vec4) {#Vec4-add-Vec4i-Vec4}
 
-### Vec4i __add(Vec4i, int) {#Vec4i-add-Vec4i-int}
+### Vec4i __add(Vec4i, integer) {#Vec4i-add-Vec4i-integer}
 
-### Vec4i __add(int, Vec4i) {#Vec4i-add-int-Vec4i}
+### Vec4i __add(integer, Vec4i) {#Vec4i-add-integer-Vec4i}
 
 ### Vec4i __sub(Vec4i, Vec4i) {#Vec4i-sub-Vec4i-Vec4i}
 
 ### Vec4 __sub(Vec4i, Vec4) {#Vec4-sub-Vec4i-Vec4}
 
-### Vec4i __sub(Vec4i, int) {#Vec4i-sub-Vec4i-int}
+### Vec4i __sub(Vec4i, integer) {#Vec4i-sub-Vec4i-integer}
 
-### Vec4i __sub(int, Vec4i) {#Vec4i-sub-int-Vec4i}
+### Vec4i __sub(integer, Vec4i) {#Vec4i-sub-integer-Vec4i}
 
 ### Vec4i __mul(Vec4i, Vec4i) {#Vec4i-mul-Vec4i-Vec4i}
 
@@ -149,105 +149,105 @@ id: Vec4i
 
 ### Vec4i __mul(Vec4i, classTMatrix4<int>) {#Vec4i-mul-Vec4i-classTMatrix4int}
 
-### Vec4i __mul(Vec4i, int) {#Vec4i-mul-Vec4i-int}
+### Vec4i __mul(Vec4i, integer) {#Vec4i-mul-Vec4i-integer}
 
-### Vec4i __mul(int, Vec4i) {#Vec4i-mul-int-Vec4i}
+### Vec4i __mul(integer, Vec4i) {#Vec4i-mul-integer-Vec4i}
 
 ### Vec4i __div(Vec4i, Vec4i) {#Vec4i-div-Vec4i-Vec4i}
 
 ### Vec4 __div(Vec4i, Vec4) {#Vec4-div-Vec4i-Vec4}
 
-### Vec4i __div(Vec4i, int) {#Vec4i-div-Vec4i-int}
+### Vec4i __div(Vec4i, integer) {#Vec4i-div-Vec4i-integer}
 
-### Vec4i __div(int, Vec4i) {#Vec4i-div-int-Vec4i}
+### Vec4i __div(integer, Vec4i) {#Vec4i-div-integer-Vec4i}
 
 ### Vec4i __mod(Vec4i, Vec4i) {#Vec4i-mod-Vec4i-Vec4i}
 
 ### Vec4 __mod(Vec4i, Vec4) {#Vec4-mod-Vec4i-Vec4}
 
-### Vec4i __mod(Vec4i, int) {#Vec4i-mod-Vec4i-int}
+### Vec4i __mod(Vec4i, integer) {#Vec4i-mod-Vec4i-integer}
 
-### Vec4i __mod(int, Vec4i) {#Vec4i-mod-int-Vec4i}
+### Vec4i __mod(integer, Vec4i) {#Vec4i-mod-integer-Vec4i}
 
 ### Vec4i __pow(Vec4i, Vec4i) {#Vec4i-pow-Vec4i-Vec4i}
 
 ### Vec4 __pow(Vec4i, Vec4) {#Vec4-pow-Vec4i-Vec4}
 
-### Vec4i __pow(Vec4i, int) {#Vec4i-pow-Vec4i-int}
+### Vec4i __pow(Vec4i, integer) {#Vec4i-pow-Vec4i-integer}
 
-### Vec4i __pow(int, Vec4i) {#Vec4i-pow-int-Vec4i}
+### Vec4i __pow(integer, Vec4i) {#Vec4i-pow-integer-Vec4i}
 
 ### Vec4i __unm(Vec4i) {#Vec4i-unm-Vec4i}
 
-### bool __eq(Vec4i, Vec4i) {#bool-eq-Vec4i-Vec4i}
+### boolean __eq(Vec4i, Vec4i) {#boolean-eq-Vec4i-Vec4i}
 
-### bool __eq(Vec4i, Vec4) {#bool-eq-Vec4i-Vec4}
+### boolean __eq(Vec4i, Vec4) {#boolean-eq-Vec4i-Vec4}
 
 ## Methods
 
-### int Len() {#int-Len}
+### integer Len() {#integer-Len}
 
-### int Length() {#int-Length}
+### integer Length() {#integer-Length}
 
-### int SqrLength() {#int-SqrLength}
+### integer SqrLength() {#integer-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec4i GetAbs() {#Vec4i-GetAbs}
 
-### nil Clamp(Vec4i, int, int) {#nil-Clamp-Vec4i-int-int}
+### nil Clamp(Vec4i, integer, integer) {#nil-Clamp-Vec4i-integer-integer}
 
 ### nil Clamp(Vec4i, Vec4i, Vec4i) {#nil-Clamp-Vec4i-Vec4i-Vec4i}
 
-### Vec4i GetClamped(Vec4i, int, int) {#Vec4i-GetClamped-Vec4i-int-int}
+### Vec4i GetClamped(Vec4i, integer, integer) {#Vec4i-GetClamped-Vec4i-integer-integer}
 
 ### Vec4i GetClamped(Vec4i, Vec4i, Vec4i) {#Vec4i-GetClamped-Vec4i-Vec4i-Vec4i}
 
-### int Dot(Vec4i, Vec4i) {#int-Dot-Vec4i-Vec4i}
+### integer Dot(Vec4i, Vec4i) {#integer-Dot-Vec4i-Vec4i}
 
-### float Dot(Vec4i, Vec4) {#float-Dot-Vec4i-Vec4}
+### number Dot(Vec4i, Vec4) {#number-Dot-Vec4i-Vec4}
 
 ### Vec4i __band(Vec4i, Vec4i) {#Vec4i-band-Vec4i-Vec4i}
 
-### Vec4i __band(int, Vec4i) {#Vec4i-band-int-Vec4i}
+### Vec4i __band(integer, Vec4i) {#Vec4i-band-integer-Vec4i}
 
-### Vec4i __band(Vec4i, int) {#Vec4i-band-Vec4i-int}
+### Vec4i __band(Vec4i, integer) {#Vec4i-band-Vec4i-integer}
 
 ### Vec4i __bor(Vec4i, Vec4i) {#Vec4i-bor-Vec4i-Vec4i}
 
-### Vec4i __bor(int, Vec4i) {#Vec4i-bor-int-Vec4i}
+### Vec4i __bor(integer, Vec4i) {#Vec4i-bor-integer-Vec4i}
 
-### Vec4i __bor(Vec4i, int) {#Vec4i-bor-Vec4i-int}
+### Vec4i __bor(Vec4i, integer) {#Vec4i-bor-Vec4i-integer}
 
 ### Vec4i __bxor(Vec4i, Vec4i) {#Vec4i-bxor-Vec4i-Vec4i}
 
-### Vec4i __bxor(int, Vec4i) {#Vec4i-bxor-int-Vec4i}
+### Vec4i __bxor(integer, Vec4i) {#Vec4i-bxor-integer-Vec4i}
 
-### Vec4i __bxor(Vec4i, int) {#Vec4i-bxor-Vec4i-int}
+### Vec4i __bxor(Vec4i, integer) {#Vec4i-bxor-Vec4i-integer}
 
 ### Vec4i __bnot(Vec4i) {#Vec4i-bnot-Vec4i}
 
 ### Vec4i __shl(Vec4i, Vec4i) {#Vec4i-shl-Vec4i-Vec4i}
 
-### Vec4i __shl(int, Vec4i) {#Vec4i-shl-int-Vec4i}
+### Vec4i __shl(integer, Vec4i) {#Vec4i-shl-integer-Vec4i}
 
-### Vec4i __shl(Vec4i, int) {#Vec4i-shl-Vec4i-int}
+### Vec4i __shl(Vec4i, integer) {#Vec4i-shl-Vec4i-integer}
 
 ### Vec4i __shr(Vec4i, Vec4i) {#Vec4i-shr-Vec4i-Vec4i}
 
-### Vec4i __shr(int, Vec4i) {#Vec4i-shr-int-Vec4i}
+### Vec4i __shr(integer, Vec4i) {#Vec4i-shr-integer-Vec4i}
 
-### Vec4i __shr(Vec4i, int) {#Vec4i-shr-Vec4i-int}
+### Vec4i __shr(Vec4i, integer) {#Vec4i-shr-Vec4i-integer}
 
 ## Properties
 
-### int x {#int-x}
+### integer x {#integer-x}
 
-### int y {#int-y}
+### integer y {#integer-y}
 
-### int z {#int-z}
+### integer z {#integer-z}
 
-### int w {#int-w}
+### integer w {#integer-w}
 
 ### Vec4i zero {#Vec4i-zero}
 
