--- a/docs/api/voxelData.mdx
+++ b/docs/api/voxelData.mdx
@@ -13,17 +13,17 @@ id: VoxelData
 
 ### nil Mirror(Vec3, Vec3) {#nil-Mirror-Vec3-Vec3}
 
-### bool, string SetPath(string) {#bool-string-SetPath-string}
+### boolean, string SetPath(string) {#boolean-string-SetPath-string}
 
 ## Metamethods
 
-### bool __eq(VoxelData, VoxelData) {#bool-eq-VoxelData-VoxelData}
+### boolean __eq(VoxelData, VoxelData) {#boolean-eq-VoxelData-VoxelData}
 
 ## Properties
 
 ### Object object {#Object-object}
 
-### bool isDestroyed {#bool-isDestroyed}
+### boolean isDestroyed {#boolean-isDestroyed}
 
 ### string type {#string-type}
 
@@ -31,26 +31,26 @@ id: VoxelData
 
 ### VoxelDataResource data {#VoxelDataResource-data}
 
-### bool copyOnWrite {#bool-copyOnWrite}
+### boolean copyOnWrite {#boolean-copyOnWrite}
 make local copy of voxel data resource if edited 
 
-### bool save {#bool-save}
+### boolean save {#boolean-save}
 
-### bool unpackOnLoad {#bool-unpackOnLoad}
+### boolean unpackOnLoad {#boolean-unpackOnLoad}
 
-### bool releaseResources {#bool-releaseResources}
+### boolean releaseResources {#boolean-releaseResources}
 
-### bool enforceReplaceRendSourceAndEntity {#bool-enforceReplaceRendSourceAndEntity}
+### boolean enforceReplaceRendSourceAndEntity {#boolean-enforceReplaceRendSourceAndEntity}
 
-### bool ramCopy {#bool-ramCopy}
+### boolean ramCopy {#boolean-ramCopy}
 
-### int potScale {#int-potScale}
+### integer potScale {#integer-potScale}
 
-### bool paused {#bool-paused}
+### boolean paused {#boolean-paused}
 
-### int startAtMs {#int-startAtMs}
+### integer startAtMs {#integer-startAtMs}
 
-### double startAtFrame {#double-startAtFrame}
+### number startAtFrame {#number-startAtFrame}
 
-### float playbackSpeed {#float-playbackSpeed}
+### number playbackSpeed {#number-playbackSpeed}
 
