--- a/docs/api/voxelInspectData.mdx
+++ b/docs/api/voxelInspectData.mdx
@@ -15,7 +15,7 @@ id: VoxelInspectData
 
 ## Properties
 
-### float voxelSize {#float-voxelSize}
+### number voxelSize {#number-voxelSize}
 
 ### string header {#string-header}
 
