--- a/docs/api/capsule.mdx
+++ b/docs/api/capsule.mdx
@@ -9,7 +9,7 @@ id: Capsule
 
 ### Capsule() {#Capsule}
 
-### Capsule(Vec3, Vec3, float, float) {#Capsule-Vec3-Vec3-float-float}
+### Capsule(Vec3, Vec3, number, number) {#Capsule-Vec3-Vec3-number-number}
 
 ### Capsule(Vec3, Vec3) {#Capsule-Vec3-Vec3}
 
