--- a/docs/api/mat4.mdx
+++ b/docs/api/mat4.mdx
@@ -9,9 +9,9 @@ id: Mat4
 
 ### Mat4() {#Mat4}
 
-### Mat4(float) {#Mat4-float}
+### Mat4(number) {#Mat4-number}
 
-### Mat4(float, float, float, float, float, float, float, float, float, float, float, float, float, float, float, float) {#Mat4-float-float-float-float-float-float-float-float-float-float-float-float-float-float-float-float}
+### Mat4(number, number, number, number, number, number, number, number, number, number, number, number, number, number, number, number) {#Mat4-number-number-number-number-number-number-number-number-number-number-number-number-number-number-number-number}
 
 ### Mat4(Vec4, Vec4, Vec4, Vec4) {#Mat4-Vec4-Vec4-Vec4-Vec4}
 
@@ -53,43 +53,43 @@ id: Mat4
 
 ## Metamethods
 
-### Vec4 __index(Mat4, int) {#Vec4-index-Mat4-int}
+### Vec4 __index(Mat4, integer) {#Vec4-index-Mat4-integer}
 
-### nil __newindex(Mat4, int, Vec4) {#nil-newindex-Mat4-int-Vec4}
+### nil __newindex(Mat4, integer, Vec4) {#nil-newindex-Mat4-integer-Vec4}
 
 ### Mat4 __add(Mat4, Mat4) {#Mat4-add-Mat4-Mat4}
 
-### Mat4 __add(Mat4, float) {#Mat4-add-Mat4-float}
+### Mat4 __add(Mat4, number) {#Mat4-add-Mat4-number}
 
-### Mat4 __add(float, Mat4) {#Mat4-add-float-Mat4}
+### Mat4 __add(number, Mat4) {#Mat4-add-number-Mat4}
 
 ### Mat4 __sub(Mat4, Mat4) {#Mat4-sub-Mat4-Mat4}
 
-### Mat4 __sub(Mat4, float) {#Mat4-sub-Mat4-float}
+### Mat4 __sub(Mat4, number) {#Mat4-sub-Mat4-number}
 
-### Mat4 __sub(float, Mat4) {#Mat4-sub-float-Mat4}
+### Mat4 __sub(number, Mat4) {#Mat4-sub-number-Mat4}
 
 ### Mat4 __mul(Mat4, Mat4) {#Mat4-mul-Mat4-Mat4}
 
-### Mat4 __mul(Mat4, float) {#Mat4-mul-Mat4-float}
+### Mat4 __mul(Mat4, number) {#Mat4-mul-Mat4-number}
 
-### Mat4 __mul(float, Mat4) {#Mat4-mul-float-Mat4}
+### Mat4 __mul(number, Mat4) {#Mat4-mul-number-Mat4}
 
 ### Mat4 __div(Mat4, Mat4) {#Mat4-div-Mat4-Mat4}
 
-### Mat4 __div(Mat4, float) {#Mat4-div-Mat4-float}
+### Mat4 __div(Mat4, number) {#Mat4-div-Mat4-number}
 
-### Mat4 __div(float, Mat4) {#Mat4-div-float-Mat4}
+### Mat4 __div(number, Mat4) {#Mat4-div-number-Mat4}
 
 ### Vec4 __div(Vec4, Mat4) {#Vec4-div-Vec4-Mat4}
 
 ### Mat4 __unm(Mat4) {#Mat4-unm-Mat4}
 
-### bool __eq(Mat4, Mat4) {#bool-eq-Mat4-Mat4}
+### boolean __eq(Mat4, Mat4) {#boolean-eq-Mat4-Mat4}
 
 ## Methods
 
-### float GetDeterminant() {#float-GetDeterminant}
+### number GetDeterminant() {#number-GetDeterminant}
 
 ### Mat4 Transpose() {#Mat4-Transpose}
 
@@ -99,35 +99,35 @@ id: Mat4
 
 ### Mat4 GetInverted() {#Mat4-GetInverted}
 
-### bool IsIdentity(float) {#bool-IsIdentity-float}
+### boolean IsIdentity(number) {#boolean-IsIdentity-number}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
-### bool IsSingular() {#bool-IsSingular}
+### boolean IsSingular() {#boolean-IsSingular}
 
-### bool IsAnyNaN() {#bool-IsAnyNaN}
+### boolean IsAnyNaN() {#boolean-IsAnyNaN}
 
-### Mat4 Translation(float, float, float) {#Mat4-Translation-float-float-float}
+### Mat4 Translation(number, number, number) {#Mat4-Translation-number-number-number}
 
 ### Mat4 Translation(Vec3) {#Mat4-Translation-Vec3}
 
-### Mat4 RotationXYZ(float, float, float) {#Mat4-RotationXYZ-float-float-float}
+### Mat4 RotationXYZ(number, number, number) {#Mat4-RotationXYZ-number-number-number}
 
 ### Mat4 RotationXYZ(Vec3) {#Mat4-RotationXYZ-Vec3}
 
-### Mat4 RotationYawPitchRoll(float, float, float) {#Mat4-RotationYawPitchRoll-float-float-float}
+### Mat4 RotationYawPitchRoll(number, number, number) {#Mat4-RotationYawPitchRoll-number-number-number}
 
 ### Mat4 RotationYawPitchRoll(Vec3) {#Mat4-RotationYawPitchRoll-Vec3}
 
-### Mat4 Scaling(float, float, float) {#Mat4-Scaling-float-float-float}
+### Mat4 Scaling(number, number, number) {#Mat4-Scaling-number-number-number}
 
 ### Mat4 Scaling(Vec3) {#Mat4-Scaling-Vec3}
 
 ### Mat4 LookAt(Vec3, Vec3, Vec3) {#Mat4-LookAt-Vec3-Vec3-Vec3}
 
-### Mat4 Perspective(float, float, float, float) {#Mat4-Perspective-float-float-float-float}
+### Mat4 Perspective(number, number, number, number) {#Mat4-Perspective-number-number-number-number}
 
-### Mat4 Ortho(float, float, float, float, float, float) {#Mat4-Ortho-float-float-float-float-float-float}
+### Mat4 Ortho(number, number, number, number, number, number) {#Mat4-Ortho-number-number-number-number-number-number}
 
 ## Properties
 
