--- a/docs/api/quat.mdx
+++ b/docs/api/quat.mdx
@@ -9,13 +9,13 @@ id: Quat
 
 ### Quat() {#Quat}
 
-### Quat(float, Vec3) {#Quat-float-Vec3}
+### Quat(number, Vec3) {#Quat-number-Vec3}
 
 ### Quat(Mat4) {#Quat-Mat4}
 
 ### Quat(Mat3) {#Quat-Mat3}
 
-### Quat(float, float, float, float) {#Quat-float-float-float-float}
+### Quat(number, number, number, number) {#Quat-number-number-number-number}
 
 ### Quat(Quat) {#Quat-Quat}
 
@@ -31,37 +31,37 @@ id: Quat
 
 ### Vec3 __mul(Quat, Vec3) {#Vec3-mul-Quat-Vec3}
 
-### Quat __mul(float, Quat) {#Quat-mul-float-Quat}
+### Quat __mul(number, Quat) {#Quat-mul-number-Quat}
 
-### Quat __mul(Quat, float) {#Quat-mul-Quat-float}
+### Quat __mul(Quat, number) {#Quat-mul-Quat-number}
 
-### Quat __div(Quat, float) {#Quat-div-Quat-float}
+### Quat __div(Quat, number) {#Quat-div-Quat-number}
 
-### Quat __pow(Quat, float) {#Quat-pow-Quat-float}
+### Quat __pow(Quat, number) {#Quat-pow-Quat-number}
 
 ### Quat __unm(Quat) {#Quat-unm-Quat}
 
-### bool __eq(Quat, Quat) {#bool-eq-Quat-Quat}
+### boolean __eq(Quat, Quat) {#boolean-eq-Quat-Quat}
 
 ## Methods
 
-### float Len() {#float-Len}
+### number Len() {#number-Len}
 
-### float Length() {#float-Length}
+### number Length() {#number-Length}
 
-### float SqrLength() {#float-SqrLength}
+### number SqrLength() {#number-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
-### float Dot(Quat) {#float-Dot-Quat}
+### number Dot(Quat) {#number-Dot-Quat}
 
-### Quat Lerp(Quat, Quat, float) {#Quat-Lerp-Quat-Quat-float}
+### Quat Lerp(Quat, Quat, number) {#Quat-Lerp-Quat-Quat-number}
 
-### Quat Slerp(Quat, Quat, float) {#Quat-Slerp-Quat-Quat-float}
+### Quat Slerp(Quat, Quat, number) {#Quat-Slerp-Quat-Quat-number}
 
-### Quat Sterp(Quat, Quat, float) {#Quat-Sterp-Quat-Quat-float}
+### Quat Sterp(Quat, Quat, number) {#Quat-Sterp-Quat-Quat-number}
 
-### Quat Sterp(Quat, Quat, float, Vec3) {#Quat-Sterp-Quat-Quat-float-Vec3}
+### Quat Sterp(Quat, Quat, number, Vec3) {#Quat-Sterp-Quat-Quat-number-Vec3}
 
 ### nil Normalize() {#nil-Normalize}
 
@@ -71,31 +71,31 @@ id: Quat
 
 ### Quat GetInversed() {#Quat-GetInversed}
 
-### nil Rotate(Quat, float, Vec3) {#nil-Rotate-Quat-float-Vec3}
+### nil Rotate(Quat, number, Vec3) {#nil-Rotate-Quat-number-Vec3}
 
-### Quat GetRotated(Quat, float, Vec3) {#Quat-GetRotated-Quat-float-Vec3}
+### Quat GetRotated(Quat, number, Vec3) {#Quat-GetRotated-Quat-number-Vec3}
 
 ### Quat GetConjugate() {#Quat-GetConjugate}
 
-### float GetPitch(Quat) {#float-GetPitch-Quat}
+### number GetPitch(Quat) {#number-GetPitch-Quat}
 
-### float GetYaw(Quat) {#float-GetYaw-Quat}
+### number GetYaw(Quat) {#number-GetYaw-Quat}
 
-### float GetRoll(Quat) {#float-GetRoll-Quat}
+### number GetRoll(Quat) {#number-GetRoll-Quat}
 
 ### Vec3 GetEuler(Quat) {#Vec3-GetEuler-Quat}
 
-### float GetAngle(Quat) {#float-GetAngle-Quat}
+### number GetAngle(Quat) {#number-GetAngle-Quat}
 
 ### Vec3 GetAxis() {#Vec3-GetAxis}
 
-### Quat Euler(float, float, float) {#Quat-Euler-float-float-float}
+### Quat Euler(number, number, number) {#Quat-Euler-number-number-number}
 
 ### Quat Euler(Vec3) {#Quat-Euler-Vec3}
 
 ### Quat Axes(Vec3, Vec3) {#Quat-Axes-Vec3-Vec3}
 
-### Quat AngleAxis(float, Vec3) {#Quat-AngleAxis-float-Vec3}
+### Quat AngleAxis(number, Vec3) {#Quat-AngleAxis-number-Vec3}
 
 ### Quat LookAt(Vec3) {#Quat-LookAt-Vec3}
 
@@ -105,13 +105,13 @@ id: Quat
 
 ## Properties
 
-### float x {#float-x}
+### number x {#number-x}
 
-### float y {#float-y}
+### number y {#number-y}
 
-### float z {#float-z}
+### number z {#number-z}
 
-### float w {#float-w}
+### number w {#number-w}
 
 ### Quat identity {#Quat-identity}
 
