--- a/docs/api/vec3i.mdx
+++ b/docs/api/vec3i.mdx
@@ -9,41 +9,41 @@ id: Vec3i
 
 ### Vec3i() {#Vec3i}
 
-### Vec3i(int) {#Vec3i-int}
+### Vec3i(integer) {#Vec3i-integer}
 
-### Vec3i(float) {#Vec3i-float}
+### Vec3i(number) {#Vec3i-number}
 
-### Vec3i(int, int, int) {#Vec3i-int-int-int}
+### Vec3i(integer, integer, integer) {#Vec3i-integer-integer-integer}
 
-### Vec3i(int, int, float) {#Vec3i-int-int-float}
+### Vec3i(integer, integer, number) {#Vec3i-integer-integer-number}
 
-### Vec3i(int, float, int) {#Vec3i-int-float-int}
+### Vec3i(integer, number, integer) {#Vec3i-integer-number-integer}
 
-### Vec3i(int, float, float) {#Vec3i-int-float-float}
+### Vec3i(integer, number, number) {#Vec3i-integer-number-number}
 
-### Vec3i(float, int, int) {#Vec3i-float-int-int}
+### Vec3i(number, integer, integer) {#Vec3i-number-integer-integer}
 
-### Vec3i(float, int, float) {#Vec3i-float-int-float}
+### Vec3i(number, integer, number) {#Vec3i-number-integer-number}
 
-### Vec3i(float, float, int) {#Vec3i-float-float-int}
+### Vec3i(number, number, integer) {#Vec3i-number-number-integer}
 
-### Vec3i(float, float, float) {#Vec3i-float-float-float}
+### Vec3i(number, number, number) {#Vec3i-number-number-number}
 
-### Vec3i(Vec2i, int) {#Vec3i-Vec2i-int}
+### Vec3i(Vec2i, integer) {#Vec3i-Vec2i-integer}
 
-### Vec3i(Vec2i, float) {#Vec3i-Vec2i-float}
+### Vec3i(Vec2i, number) {#Vec3i-Vec2i-number}
 
-### Vec3i(Vec2, int) {#Vec3i-Vec2-int}
+### Vec3i(Vec2, integer) {#Vec3i-Vec2-integer}
 
-### Vec3i(Vec2, float) {#Vec3i-Vec2-float}
+### Vec3i(Vec2, number) {#Vec3i-Vec2-number}
 
-### Vec3i(int, Vec2i) {#Vec3i-int-Vec2i}
+### Vec3i(integer, Vec2i) {#Vec3i-integer-Vec2i}
 
-### Vec3i(int, Vec2) {#Vec3i-int-Vec2}
+### Vec3i(integer, Vec2) {#Vec3i-integer-Vec2}
 
-### Vec3i(float, Vec2i) {#Vec3i-float-Vec2i}
+### Vec3i(number, Vec2i) {#Vec3i-number-Vec2i}
 
-### Vec3i(float, Vec2) {#Vec3i-float-Vec2}
+### Vec3i(number, Vec2) {#Vec3i-number-Vec2}
 
 ### Vec3i(Vec3i) {#Vec3i-Vec3i}
 
@@ -55,129 +55,129 @@ id: Vec3i
 
 ## Metamethods
 
-### int __index(Vec3i, int) {#int-index-Vec3i-int}
+### integer __index(Vec3i, integer) {#integer-index-Vec3i-integer}
 
-### nil __newindex(Vec3i, int, int) {#nil-newindex-Vec3i-int-int}
+### nil __newindex(Vec3i, integer, integer) {#nil-newindex-Vec3i-integer-integer}
 
 ### Vec3i __add(Vec3i, Vec3i) {#Vec3i-add-Vec3i-Vec3i}
 
 ### Vec3 __add(Vec3i, Vec3) {#Vec3-add-Vec3i-Vec3}
 
-### Vec3i __add(Vec3i, int) {#Vec3i-add-Vec3i-int}
+### Vec3i __add(Vec3i, integer) {#Vec3i-add-Vec3i-integer}
 
-### Vec3i __add(int, Vec3i) {#Vec3i-add-int-Vec3i}
+### Vec3i __add(integer, Vec3i) {#Vec3i-add-integer-Vec3i}
 
 ### Vec3i __sub(Vec3i, Vec3i) {#Vec3i-sub-Vec3i-Vec3i}
 
 ### Vec3 __sub(Vec3i, Vec3) {#Vec3-sub-Vec3i-Vec3}
 
-### Vec3i __sub(Vec3i, int) {#Vec3i-sub-Vec3i-int}
+### Vec3i __sub(Vec3i, integer) {#Vec3i-sub-Vec3i-integer}
 
-### Vec3i __sub(int, Vec3i) {#Vec3i-sub-int-Vec3i}
+### Vec3i __sub(integer, Vec3i) {#Vec3i-sub-integer-Vec3i}
 
 ### Vec3i __mul(Vec3i, Vec3i) {#Vec3i-mul-Vec3i-Vec3i}
 
 ### Vec3 __mul(Vec3i, Vec3) {#Vec3-mul-Vec3i-Vec3}
 
-### Vec3i __mul(Vec3i, int) {#Vec3i-mul-Vec3i-int}
+### Vec3i __mul(Vec3i, integer) {#Vec3i-mul-Vec3i-integer}
 
-### Vec3i __mul(int, Vec3i) {#Vec3i-mul-int-Vec3i}
+### Vec3i __mul(integer, Vec3i) {#Vec3i-mul-integer-Vec3i}
 
 ### Vec3i __div(Vec3i, Vec3i) {#Vec3i-div-Vec3i-Vec3i}
 
 ### Vec3 __div(Vec3i, Vec3) {#Vec3-div-Vec3i-Vec3}
 
-### Vec3i __div(Vec3i, int) {#Vec3i-div-Vec3i-int}
+### Vec3i __div(Vec3i, integer) {#Vec3i-div-Vec3i-integer}
 
-### Vec3i __div(int, Vec3i) {#Vec3i-div-int-Vec3i}
+### Vec3i __div(integer, Vec3i) {#Vec3i-div-integer-Vec3i}
 
 ### Vec3i __mod(Vec3i, Vec3i) {#Vec3i-mod-Vec3i-Vec3i}
 
 ### Vec3 __mod(Vec3i, Vec3) {#Vec3-mod-Vec3i-Vec3}
 
-### Vec3i __mod(Vec3i, int) {#Vec3i-mod-Vec3i-int}
+### Vec3i __mod(Vec3i, integer) {#Vec3i-mod-Vec3i-integer}
 
-### Vec3i __mod(int, Vec3i) {#Vec3i-mod-int-Vec3i}
+### Vec3i __mod(integer, Vec3i) {#Vec3i-mod-integer-Vec3i}
 
 ### Vec3i __pow(Vec3i, Vec3i) {#Vec3i-pow-Vec3i-Vec3i}
 
 ### Vec3 __pow(Vec3i, Vec3) {#Vec3-pow-Vec3i-Vec3}
 
-### Vec3i __pow(Vec3i, int) {#Vec3i-pow-Vec3i-int}
+### Vec3i __pow(Vec3i, integer) {#Vec3i-pow-Vec3i-integer}
 
-### Vec3i __pow(int, Vec3i) {#Vec3i-pow-int-Vec3i}
+### Vec3i __pow(integer, Vec3i) {#Vec3i-pow-integer-Vec3i}
 
 ### Vec3i __unm(Vec3i) {#Vec3i-unm-Vec3i}
 
-### bool __eq(Vec3i, Vec3i) {#bool-eq-Vec3i-Vec3i}
+### boolean __eq(Vec3i, Vec3i) {#boolean-eq-Vec3i-Vec3i}
 
-### bool __eq(Vec3i, Vec3) {#bool-eq-Vec3i-Vec3}
+### boolean __eq(Vec3i, Vec3) {#boolean-eq-Vec3i-Vec3}
 
 ## Methods
 
-### int Len() {#int-Len}
+### integer Len() {#integer-Len}
 
-### int Length() {#int-Length}
+### integer Length() {#integer-Length}
 
-### int SqrLength() {#int-SqrLength}
+### integer SqrLength() {#integer-SqrLength}
 
-### bool IsZero() {#bool-IsZero}
+### boolean IsZero() {#boolean-IsZero}
 
 ### Vec3i GetAbs() {#Vec3i-GetAbs}
 
-### nil Clamp(Vec3i, int, int) {#nil-Clamp-Vec3i-int-int}
+### nil Clamp(Vec3i, integer, integer) {#nil-Clamp-Vec3i-integer-integer}
 
 ### nil Clamp(Vec3i, Vec3i, Vec3i) {#nil-Clamp-Vec3i-Vec3i-Vec3i}
 
-### Vec3i GetClamped(Vec3i, int, int) {#Vec3i-GetClamped-Vec3i-int-int}
+### Vec3i GetClamped(Vec3i, integer, integer) {#Vec3i-GetClamped-Vec3i-integer-integer}
 
 ### Vec3i GetClamped(Vec3i, Vec3i, Vec3i) {#Vec3i-GetClamped-Vec3i-Vec3i-Vec3i}
 
-### int Dot(Vec3i, Vec3i) {#int-Dot-Vec3i-Vec3i}
+### integer Dot(Vec3i, Vec3i) {#integer-Dot-Vec3i-Vec3i}
 
-### float Dot(Vec3i, Vec3) {#float-Dot-Vec3i-Vec3}
+### number Dot(Vec3i, Vec3) {#number-Dot-Vec3i-Vec3}
 
 ### Vec3i __band(Vec3i, Vec3i) {#Vec3i-band-Vec3i-Vec3i}
 
-### Vec3i __band(int, Vec3i) {#Vec3i-band-int-Vec3i}
+### Vec3i __band(integer, Vec3i) {#Vec3i-band-integer-Vec3i}
 
-### Vec3i __band(Vec3i, int) {#Vec3i-band-Vec3i-int}
+### Vec3i __band(Vec3i, integer) {#Vec3i-band-Vec3i-integer}
 
 ### Vec3i __bor(Vec3i, Vec3i) {#Vec3i-bor-Vec3i-Vec3i}
 
-### Vec3i __bor(int, Vec3i) {#Vec3i-bor-int-Vec3i}
+### Vec3i __bor(integer, Vec3i) {#Vec3i-bor-integer-Vec3i}
 
-### Vec3i __bor(Vec3i, int) {#Vec3i-bor-Vec3i-int}
+### Vec3i __bor(Vec3i, integer) {#Vec3i-bor-Vec3i-integer}
 
 ### Vec3i __bxor(Vec3i, Vec3i) {#Vec3i-bxor-Vec3i-Vec3i}
 
-### Vec3i __bxor(int, Vec3i) {#Vec3i-bxor-int-Vec3i}
+### Vec3i __bxor(integer, Vec3i) {#Vec3i-bxor-integer-Vec3i}
 
-### Vec3i __bxor(Vec3i, int) {#Vec3i-bxor-Vec3i-int}
+### Vec3i __bxor(Vec3i, integer) {#Vec3i-bxor-Vec3i-integer}
 
 ### Vec3i __bnot(Vec3i) {#Vec3i-bnot-Vec3i}
 
 ### Vec3i __shl(Vec3i, Vec3i) {#Vec3i-shl-Vec3i-Vec3i}
 
-### Vec3i __shl(int, Vec3i) {#Vec3i-shl-int-Vec3i}
+### Vec3i __shl(integer, Vec3i) {#Vec3i-shl-integer-Vec3i}
 
-### Vec3i __shl(Vec3i, int) {#Vec3i-shl-Vec3i-int}
+### Vec3i __shl(Vec3i, integer) {#Vec3i-shl-Vec3i-integer}
 
 ### Vec3i __shr(Vec3i, Vec3i) {#Vec3i-shr-Vec3i-Vec3i}
 
-### Vec3i __shr(int, Vec3i) {#Vec3i-shr-int-Vec3i}
+### Vec3i __shr(integer, Vec3i) {#Vec3i-shr-integer-Vec3i}
 
-### Vec3i __shr(Vec3i, int) {#Vec3i-shr-Vec3i-int}
+### Vec3i __shr(Vec3i, integer) {#Vec3i-shr-Vec3i-integer}
 
 ### string __tostring(Vec3i) {#string-tostring-Vec3i}
 
 ## Properties
 
-### int x {#int-x}
+### integer x {#integer-x}
 
-### int y {#int-y}
+### integer y {#integer-y}
 
-### int z {#int-z}
+### integer z {#integer-z}
 
 ### Vec3i zero {#Vec3i-zero}
 
