--- a/docs/api/voxelDataResource.mdx
+++ b/docs/api/voxelDataResource.mdx
@@ -7,7 +7,7 @@ id: VoxelDataResource
 
 ## Constructors
 
-### VoxelDataResource(string, bool) {#VoxelDataResource-string-bool}
+### VoxelDataResource(string, boolean) {#VoxelDataResource-string-boolean}
 
 ### VoxelDataResource() {#VoxelDataResource}
 
@@ -15,11 +15,11 @@ id: VoxelDataResource
 
 ## Methods
 
-### string Save(string, bool) {#string-Save-string-bool}
+### string Save(string, boolean) {#string-Save-string-boolean}
 save voxel data in AM file
 second parameter controls if file will be overwritten
 
-### float, float GetBounds() {#float-float-GetBounds}
+### number, number GetBounds() {#number-number-GetBounds}
 get center (in local space) and dimensions of the voxel data
 
 ### userdata Duplicate() {#userdata-Duplicate}
@@ -28,16 +28,16 @@ get center (in local space) and dimensions of the voxel data
 
 ## Properties
 
-### bool isEditable {#bool-isEditable}
+### boolean isEditable {#boolean-isEditable}
 returns false if loaded as aevv
 
-### bool isSaved {#bool-isSaved}
+### boolean isSaved {#boolean-isSaved}
 returns true if data was modified
 
-### bool hasAnyVoxels {#bool-hasAnyVoxels}
+### boolean hasAnyVoxels {#boolean-hasAnyVoxels}
 
-### float volumePerc {#float-volumePerc}
+### number volumePerc {#number-volumePerc}
 Approximate. Quickly count non-zero blocks of voxel object. Block size is 8x8x8. Block can be fully filled or just 1 voxel
 
-### float scaleToStatic {#float-scaleToStatic}
+### number scaleToStatic {#number-scaleToStatic}
 
